v2.0.1/reference/mcmc.md
# Obtaining Posterior Samples for all Model Parameters

**\[stable\]**

This is the function that actually runs the `JAGS` MCMC machinery to
produce posterior samples from all model parameters and required derived
values. It is a generic function, so that customized versions may be
conveniently defined for specific subclasses of
[`GeneralData`](https://openpharma.github.io/crmPack/reference/GeneralData-class.md),
[`GeneralModel`](https://openpharma.github.io/crmPack/reference/GeneralModel-class.md),
and
[`McmcOptions`](https://openpharma.github.io/crmPack/reference/McmcOptions-class.md)
input.

## Usage

``` r
mcmc(data, model, options, ...)

# S4 method for class 'GeneralData,GeneralModel,McmcOptions'
mcmc(data, model, options, from_prior = data@nObs == 0L, ...)

# S4 method for class 'GeneralData,DualEndpointRW,McmcOptions'
mcmc(data, model, options, from_prior = data@nObs == 0L, ...)

# S4 method for class 'GeneralData,DualEndpointBeta,McmcOptions'
mcmc(data, model, options, from_prior = data@nObs == 0L, ...)

# S4 method for class 'GeneralData,DualEndpointEmax,McmcOptions'
mcmc(data, model, options, from_prior = data@nObs == 0L, ...)

# S4 method for class 'GeneralData,OneParLogNormalPrior,McmcOptions'
mcmc(data, model, options, from_prior = data@nObs == 0L, ...)

# S4 method for class 'GeneralData,OneParExpPrior,McmcOptions'
mcmc(data, model, options, from_prior = data@nObs == 0L, ...)

# S4 method for class 'DataMixture,GeneralModel,McmcOptions'
mcmc(
  data,
  model,
  options,
  from_prior = data@nObs == 0L & data@nObsshare == 0L,
  ...
)

# S4 method for class 'Data,LogisticIndepBeta,McmcOptions'
mcmc(data, model, options, ...)

# S4 method for class 'DataDual,Effloglog,McmcOptions'
mcmc(data, model, options, ...)

# S4 method for class 'DataDual,EffFlexi,McmcOptions'
mcmc(data, model, options, ...)

# S4 method for class 'DataOrdinal,LogisticLogNormalOrdinal,McmcOptions'
mcmc(data, model, options, ...)
```

## Arguments

- data:

  (`GeneralData`)  
  an input data.

- model:

  (`GeneralModel`)  
  an input model.

- options:

  (`McmcOptions`)  
  MCMC options.

- ...:

  not used.

- from_prior:

  (`flag`)  
  sample from the prior only? Default to `TRUE` when number of
  observations in `data` is `0`. For some models it might be necessary
  to specify it manually here though.

## Value

The posterior samples, an object of class
[`Samples`](https://openpharma.github.io/crmPack/reference/Samples-class.md).

## Functions

- `mcmc(data = GeneralData, model = GeneralModel, options = McmcOptions)`:
  Standard method which uses JAGS.

- `mcmc(data = GeneralData, model = DualEndpointRW, options = McmcOptions)`:
  Standard method which uses JAGS. For the
  [`DualEndpointRW`](https://openpharma.github.io/crmPack/reference/DualEndpointRW-class.md)
  model, it is required that there are at least two (in case of random
  walk prior of the first order on the biomarker level) or three doses
  in the grid.

- `mcmc(data = GeneralData, model = DualEndpointBeta, options = McmcOptions)`:
  Standard method which uses JAGS. For the
  [`DualEndpointBeta`](https://openpharma.github.io/crmPack/reference/DualEndpointBeta-class.md)
  model, it is required that the value of `ref_dose_beta` slot is
  greater than the maximum dose in a grid. This requirement comes from
  definition of the beta function that is used to model dose-biomarker
  relationship in
  [`DualEndpointBeta`](https://openpharma.github.io/crmPack/reference/DualEndpointBeta-class.md)
  model. The other requirement is that there must be at least one dose
  in the grid.

- `mcmc(data = GeneralData, model = DualEndpointEmax, options = McmcOptions)`:
  Standard method which uses JAGS. For the
  [`DualEndpointEmax`](https://openpharma.github.io/crmPack/reference/DualEndpointEmax-class.md)
  model, it is required that there is at least one dose in the grid.

- `mcmc(data = GeneralData, model = OneParLogNormalPrior, options = McmcOptions)`:
  Standard method which uses JAGS. For the
  [`OneParLogNormalPrior`](https://openpharma.github.io/crmPack/reference/OneParLogNormalPrior-class.md)
  model, it is required that the length of skeleton prior probabilities
  vector should be equal to the length of the number of doses.

- `mcmc(data = GeneralData, model = OneParExpPrior, options = McmcOptions)`:
  Standard method which uses JAGS. For the
  [`OneParExpPrior`](https://openpharma.github.io/crmPack/reference/OneParExpPrior-class.md)
  model, it is required that the length of skeleton prior probabilities
  vector should be equal to the length of the number of doses.

- `mcmc(data = DataMixture, model = GeneralModel, options = McmcOptions)`:
  Method for
  [`DataMixture`](https://openpharma.github.io/crmPack/reference/DataMixture-class.md)
  with different `from_prior` default. Samples from the prior only when
  both the number of observations and the number of shared observations
  are zero.

- `mcmc(data = Data, model = LogisticIndepBeta, options = McmcOptions)`:
  Obtain posterior samples for the model parameters based on the pseudo
  [`LogisticIndepBeta`](https://openpharma.github.io/crmPack/reference/LogisticIndepBeta-class.md)
  DLE model. The joint prior and posterior probability density function
  of the intercept \\\phi_1\\ (`phi1`) and the slope \\\phi_2\\ (`phi2`)
  are given in Whitehead and Williamson (1998) . However, since
  asymptotically, the joint posterior probability density will be
  bivariate normal, we use the bivariate normal distribution to generate
  posterior samples of the intercept and the slope parameters. For the
  prior samples of the intercept and the slope, a bivariate normal
  distribution with mean and the covariance matrix given in Whitehead
  and Williamson (1998) is used.

- `mcmc(data = DataDual, model = Effloglog, options = McmcOptions)`:
  Obtain the posterior samples for the model parameters in the
  [`Effloglog`](https://openpharma.github.io/crmPack/reference/Effloglog-class.md)
  model. Given the value of \\\nu\\, the precision of the efficacy
  responses, the joint prior or the posterior probability of the
  intercept \\\theta_1\\ (`theta1`) and the slope \\\theta_2\\
  (`theta2`) is a bivariate normal distribution. The \\\nu\\ (`nu`), the
  precision of the efficacy responses is either a fixed value or has a
  gamma distribution. If a gamma distribution is used, the samples of
  `nu` will be first generated. Then the mean of the `nu` samples will
  be used to generate samples of the intercept and slope parameters of
  the model.

- `mcmc(data = DataDual, model = EffFlexi, options = McmcOptions)`:
  Obtain the posterior samples for the estimates in the
  [`EffFlexi`](https://openpharma.github.io/crmPack/reference/EffFlexi-class.md)
  model. This is the MCMC procedure based on what is described in Lang
  and Brezger (2004) such that samples of the mean efficacy responses at
  all dose levels, samples of `sigma2` \\\sigma^2\\, the variance of the
  efficacy response and samples of `sigma2betaW`
  \\\sigma^2\_{\beta_W}\\, the variance of the random walk model will be
  generated. Please refer to Lang and Brezger (2004) for the procedures
  and the form of the joint prior and posterior probability density for
  the mean efficacy responses. In addition, both `sigma2` and
  `sigma2betaW` can be fixed or have an inverse-gamma prior and
  posterior distribution. Therefore, if the inverse gamma
  distribution(s) are used, the parameters in the distribution will be
  first updated and then samples of `sigma2` and `sigma2betaW` will be
  generated using the updated parameters.

- `mcmc( data = DataOrdinal, model = LogisticLogNormalOrdinal, options = McmcOptions )`:
  Obtain the posterior samples for the model parameters in the
  [`LogisticLogNormalOrdinal`](https://openpharma.github.io/crmPack/reference/LogisticLogNormalOrdinal-class.md)
  model.

  The generic `mcmc` method returns a
  [`Samples`](https://openpharma.github.io/crmPack/reference/Samples-class.md)
  object with elements of the `data` slot named `alpha[1]`, `alpha[2]`,
  ..., `alpha[k]` and `beta` when passed a
  [`LogisticLogNormalOrdinal`](https://openpharma.github.io/crmPack/reference/LogisticLogNormalOrdinal-class.md)
  object. This makes the "alpha elements" awkward to access and is
  inconsistent with other model objects. So rename the alpha elements to
  `alpha1`, `alpha2`, ..., `alpha<k>` for ease and consistency.

## Note

The type of Random Number Generator (RNG) and its initial seed used by
`JAGS` are taken from the `options` argument. If no initial values are
supplied (i.e RNG kind or seed slot in `options` has `NA`), then they
will be generated automatically by `JAGS`.

## References

Lang S, Brezger A (2004). “Bayesian P-Splines.” *Journal of
Computational and Graphical Statistics*, **13**(1), 183–212. ISSN
10618600,
[doi:10.1198/1061860043010](https://doi.org/10.1198/1061860043010) ,
<http://www.jstor.org/stable/1391151>.  
  
Whitehead J, Williamson D (1998). “Bayesian decision procedures based on
logistic regression models for dose-finding studies.” *Journal of
Biopharmaceutical Statistics*, **8**(3), 445–467.

## Examples

``` r
# Create some data from the class `Data`.
my_data <- Data(
  x = c(0.1, 0.5, 1.5, 3, 6, 10, 10, 10),
  y = c(0, 0, 0, 0, 0, 0, 1, 0),
  doseGrid = c(0.1, 0.5, 1.5, 3, 6, seq(from = 10, to = 80, by = 2))
)
#> Used default patient IDs!
#> Used best guess cohort indices!

# Initialize the CRM model.
my_model <- LogisticLogNormal(
  mean = c(-0.85, 1),
  cov = matrix(c(1, -0.5, -0.5, 1), nrow = 2),
  ref_dose = 56
)

# Sample from the posterior distribution.
my_options <- McmcOptions(
  burnin = 100,
  step = 2,
  samples = 1000
)

samples <- mcmc(data = my_data, model = my_model, options = my_options)
samples
#> An object of class "Samples"
#> Slot "data":
#> $alpha0
#>    [1]  1.16685102 -0.33750291 -0.33750291  0.09493319  0.09493319 -0.51194447
#>    [7] -0.51194447 -0.71593452 -0.97225283 -0.32439520 -0.32439520 -0.32439520
#>   [13] -0.32439520 -0.32439520 -0.32439520 -0.32439520 -0.32439520  0.11727787
#>   [19]  0.11727787  0.11727787  0.11727787  1.00608974  1.00608974  1.00608974
#>   [25] -0.82938362 -0.82938362 -0.82938362 -0.82938362 -0.82938362 -1.66473350
#>   [31] -0.73571557 -0.73571557 -0.73571557 -1.19096920 -1.19096920 -1.19096920
#>   [37] -1.19096920  0.60724300  0.60724300  0.60724300  1.72555916  1.72555916
#>   [43]  2.07187540  1.00166088  1.00166088  1.00166088  1.00166088  1.00166088
#>   [49]  1.00166088  0.29348855  0.55909751  0.55909751 -0.71351470 -0.71351470
#>   [55] -0.71351470 -0.71351470  0.56350030  0.56350030  1.82609608  1.82609608
#>   [61]  0.29408877  0.29408877  0.29408877  0.29408877  0.14261336 -0.31335941
#>   [67] -0.31335941  0.39623465 -0.49942629 -0.58820142 -0.58820142 -0.58820142
#>   [73] -1.13783415 -1.13783415 -1.13783415 -1.47976898 -1.47976898 -1.47976898
#>   [79] -0.21394852 -0.21394852 -0.21394852 -0.17336165 -0.17336165  0.06357526
#>   [85] -0.66783599  0.97882507  0.97882507  0.97882507 -1.23595958 -1.16042134
#>   [91] -0.33690111 -0.33690111 -0.71413060 -0.19139773  1.04629009  1.04629009
#>   [97]  1.04629009 -1.29539051 -1.29539051 -1.29539051 -1.29539051 -0.14346964
#>  [103] -0.14346964 -0.41945397 -0.41945397  0.62494640  0.62494640  0.62494640
#>  [109]  0.62494640  0.62494640  0.62494640  0.70472265  0.70472265  0.17417849
#>  [115]  0.17417849  0.61107374 -0.03976116 -0.03976116 -0.03976116 -0.03976116
#>  [121]  0.69972338  0.82979250  0.10141558  0.10141558  0.10141558  1.19550252
#>  [127]  0.63612998  0.68328409  0.68328409  0.68328409  0.72226695  0.72226695
#>  [133]  0.72226695  0.72226695  0.72226695  0.72226695  0.72226695  0.72226695
#>  [139]  1.09158663 -0.42991684 -0.42991684 -0.42991684 -0.42991684  0.61192216
#>  [145]  0.12999421  0.12999421 -0.85745732 -0.10128901 -0.10128901 -0.10128901
#>  [151] -0.10128901 -0.10128901 -0.10128901 -0.14120967 -0.14120967 -0.14120967
#>  [157] -0.14120967 -0.14120967  0.00305846  0.00305846 -0.84894760 -0.84894760
#>  [163] -0.84894760  0.07821287  0.07821287  0.07821287  0.07821287  0.07821287
#>  [169] -0.36002391 -0.84412886 -0.89557274 -0.89557274 -0.89557274 -1.36149056
#>  [175]  0.30199230  0.30199230  0.30199230  0.30199230  0.30199230 -0.78878099
#>  [181] -0.78878099  0.38429996  0.54948959 -0.89101434 -0.89101434  0.30619710
#>  [187]  0.30619710  0.30619710  0.30619710 -0.03276727 -0.94865362 -0.84536323
#>  [193] -2.22538367  0.45040502  0.11741506  0.11741506  0.11741506 -0.09165174
#>  [199] -0.09165174 -0.33691409 -0.33691409 -0.33691409 -0.33691409 -0.33655453
#>  [205] -0.33655453 -0.18258665 -0.18258665 -0.18258665 -0.60015141 -0.60015141
#>  [211]  0.11148680 -0.05814326 -0.05814326 -0.05814326 -0.05814326 -0.05814326
#>  [217] -0.91564356 -0.91564356 -0.91564356 -0.84641801 -0.66234918 -1.23246075
#>  [223] -1.23246075 -1.18779127 -1.18779127 -1.18779127 -1.18779127 -1.18779127
#>  [229] -1.02887629 -0.46682555 -0.84404771 -0.84404771  0.57211844  0.08397225
#>  [235]  0.08397225  0.08397225  0.08397225  0.08397225  0.08397225  0.57578451
#>  [241]  0.57578451  0.57578451  0.57578451  0.57578451 -0.04537323 -0.04537323
#>  [247] -0.04537323 -0.43897546 -0.28566952 -0.28566952  0.48069215  0.48069215
#>  [253]  0.51424191  0.51424191  0.51424191 -0.34310239  0.76244682  0.76244682
#>  [259]  1.06687429 -1.47490803  0.40559681  0.40559681  0.40559681  0.40559681
#>  [265]  0.40559681  0.33058358  0.33058358  0.33058358  0.13744201  1.53034873
#>  [271]  1.16650638  1.16650638  0.63317462  0.63317462 -0.28568618 -0.28568618
#>  [277]  1.37814733  0.01537845  0.01537845 -1.08808887 -1.08808887 -1.08808887
#>  [283] -0.93488518 -0.50796525 -0.50796525  0.43868097  0.43868097  0.58583228
#>  [289]  0.58583228  0.58583228 -0.19845665 -0.19845665 -0.19845665 -0.19845665
#>  [295] -0.91418774 -0.91418774 -0.44291383 -0.44291383  1.19564508 -0.49567963
#>  [301]  1.08635292 -0.29283030 -0.29283030 -0.29283030 -0.29283030  1.15340128
#>  [307] -1.04509009  0.60201967  0.60201967  0.60201967  0.60201967  0.60201967
#>  [313]  0.60201967  0.67804101 -1.60418157 -1.60418157 -1.20887324 -1.08892451
#>  [319] -0.50492470  0.11438752  0.11438752  0.11438752 -1.04615671 -1.22060082
#>  [325] -1.22060082 -1.22060082  0.05102905  0.05102905  0.05102905  0.05102905
#>  [331]  0.05102905  0.05102905  0.05102905  0.05102905  0.05102905  0.05102905
#>  [337]  0.05102905  0.05102905  0.05102905  0.62026983  0.62026983  0.62026983
#>  [343]  0.62026983  0.62026983  0.62026983  0.35439373  0.49206234 -0.96513017
#>  [349] -0.96513017 -0.66952406 -0.13022907  0.02592504  0.02627020  0.02627020
#>  [355] -0.43587749 -0.43587749 -0.43587749 -1.10591015 -1.10591015 -1.10591015
#>  [361] -1.10591015 -1.10591015  0.40015322 -1.97039809 -1.97039809 -1.97039809
#>  [367] -1.97039809 -1.84470784 -0.73204534  0.14361678 -0.21332851  0.34820813
#>  [373]  0.34820813  0.34820813  0.64363321  0.64363321  0.64363321  0.64363321
#>  [379]  0.64363321  0.44520012  0.24559213  0.50503853  1.05626449  0.30659206
#>  [385]  0.30659206  1.35871223 -0.66193107 -0.66193107 -0.66193107 -0.04810635
#>  [391]  0.32715851  0.32715851  0.32715851  0.32715851 -0.22294817 -0.22294817
#>  [397] -0.76180508 -0.76180508 -0.76180508 -0.76180508 -0.76180508 -0.76180508
#>  [403] -0.76180508 -1.01226760 -1.01226760 -1.01226760 -0.82715895 -0.82715895
#>  [409] -0.82715895  1.14275901  0.97512681  0.22699864  0.22699864  0.22699864
#>  [415] -0.23836513 -0.23836513 -0.77475183 -0.77475183 -0.77475183 -0.77475183
#>  [421] -0.77475183 -0.77475183  0.05477611  0.05477611  0.05477611  0.05477611
#>  [427]  0.08969873  0.08969873  0.13143640  0.13143640  0.13143640  0.13143640
#>  [433]  0.13143640  0.13143640  0.55600050 -1.06658659 -1.53447446 -1.53447446
#>  [439] -0.99655032 -0.19730552 -0.19730552 -0.19730552 -0.42318970 -0.61542135
#>  [445] -0.61542135 -0.61542135 -0.61542135 -0.61542135 -0.61542135 -0.61542135
#>  [451] -0.61542135 -0.61542135 -0.61542135 -0.78973038 -0.78973038 -0.42403839
#>  [457] -0.27081258 -0.27081258 -1.10461119  0.41221871 -0.70911432 -0.70911432
#>  [463] -0.70911432 -0.70911432 -0.48702129 -0.48702129 -0.48702129  0.84243019
#>  [469]  0.84243019 -0.89681228 -0.89681228 -0.89681228 -0.89681228 -0.89681228
#>  [475] -0.89681228 -0.27115071 -0.27115071 -0.27115071 -0.27115071 -0.27115071
#>  [481] -0.27115071 -0.27115071 -0.27115071 -0.27115071 -0.27115071  0.44071190
#>  [487]  0.44071190 -1.01971138 -1.01971138 -1.01971138 -2.23529433 -2.23529433
#>  [493] -2.23529433 -2.00599080 -1.93628136  1.06238227  0.09234196  0.09234196
#>  [499] -1.91862015 -1.91862015 -1.91862015  1.31766280  0.44847514 -1.37086173
#>  [505] -0.13466240 -0.74091437 -0.74091437 -0.70855778 -0.70855778 -0.76765819
#>  [511] -0.76765819 -0.76765819 -0.76765819 -0.09151162 -0.09151162  0.39395383
#>  [517] -0.17332614 -0.17332614 -0.17332614 -0.17332614 -0.17332614 -0.17332614
#>  [523] -0.17332614 -0.17332614  0.91057062  0.91057062  1.54357262  2.12143504
#>  [529]  2.12143504  2.12143504  2.12143504  1.61940364  1.61940364  1.61940364
#>  [535]  1.25241728  1.25241728 -0.18584877  1.64176483  0.81554736  0.81554736
#>  [541]  0.81554736 -0.35282663 -0.35282663 -0.35282663 -0.35282663 -0.35282663
#>  [547]  0.66519584  0.66519584  0.66519584  0.66519584  0.66519584  0.66519584
#>  [553]  0.66519584  0.66519584  0.66519584  0.66519584  0.41608019  0.41608019
#>  [559] -0.34772022 -0.37833945 -1.19302248  0.59985626  0.25015694  0.25015694
#>  [565]  0.01140236  0.01140236  0.01140236  0.01140236  0.54567439 -0.66311755
#>  [571] -0.66311755 -0.66311755 -0.73909831 -0.73909831  0.59107207  0.59107207
#>  [577] -0.28815432 -1.40379356 -1.40379356 -1.85875644 -1.24106195 -1.24106195
#>  [583] -1.24106195  1.21237600  1.21237600  1.21237600  1.21237600  1.21237600
#>  [589]  0.69497927  0.69497927  0.54547148  0.54547148  0.40211367  0.54157879
#>  [595]  0.24283362  0.24283362  0.37115271  0.37115271  0.37115271 -0.05305422
#>  [601] -0.05305422 -0.05305422 -0.05305422 -0.05305422 -0.05305422  0.14924655
#>  [607]  1.08605513  1.08605513  1.08605513 -0.75533686 -1.45814495 -1.45814495
#>  [613]  0.74845102  0.74845102  0.60993212  0.60993212  0.60993212  0.60993212
#>  [619]  0.60993212  0.60993212  0.60993212  0.60993212  0.60993212  0.37998913
#>  [625]  0.37998913  0.37998913 -0.96930034 -0.44194690 -0.44194690  0.74812742
#>  [631] -1.23323878 -1.23323878 -1.23323878 -1.23323878 -1.23323878 -1.23323878
#>  [637] -1.15331519 -1.15331519 -1.15331519 -1.14564324 -1.14564324  0.68967769
#>  [643]  0.68967769  0.28847755  0.26339621  0.26339621  0.26339621  0.52102808
#>  [649]  0.43086853 -0.74925880 -0.74925880 -0.17991826  0.95449182  0.95449182
#>  [655]  0.34505322  0.34505322  0.34505322 -0.18381904 -0.18381904 -0.18381904
#>  [661] -0.18466064 -0.18466064 -0.18466064 -0.02664169 -0.02664169 -0.02664169
#>  [667]  1.61545532  1.61545532  1.61545532  1.61545532  1.61545532  0.09178504
#>  [673] -0.51317072 -0.51317072 -0.51317072 -0.51317072 -0.51317072 -0.51317072
#>  [679] -0.51317072  0.72431113 -0.30769478 -0.89911492 -0.89911492 -1.72602675
#>  [685] -0.71940044 -0.49629242 -0.49629242 -0.49629242 -0.49629242 -0.49629242
#>  [691] -0.15389986 -0.15389986 -0.58998196  0.45703227 -1.43685074 -0.23154454
#>  [697] -0.52424990 -0.52424990 -0.52424990  0.39799702  0.26649574  0.26649574
#>  [703]  0.26649574  0.26649574 -0.38307289 -0.38307289 -0.38307289 -0.38307289
#>  [709] -0.38307289 -0.45514317 -0.45514317 -0.45514317 -0.45514317 -0.45514317
#>  [715] -0.45514317 -0.45514317 -0.45514317 -1.84243259 -1.84243259 -1.84243259
#>  [721] -1.84243259 -0.68956999 -0.68956999  0.06659972  0.24363732  0.92598362
#>  [727]  0.41708560 -0.77022305 -2.02512895 -2.02512895 -2.02512895 -2.02512895
#>  [733]  0.30151901  0.30151901  0.30151901  0.30151901  0.43419098  0.28804836
#>  [739]  0.47416326  0.47416326  0.47416326  0.47416326  0.47416326  0.47416326
#>  [745]  0.47416326  0.47416326  0.47416326 -0.36834864 -0.10540287 -0.10540287
#>  [751] -0.10540287 -0.10540287 -0.10540287 -0.50349456  0.05896890  0.05896890
#>  [757]  0.05896890  0.64747170  0.64747170  0.64747170  0.64747170 -0.92420855
#>  [763] -0.92420855 -0.92420855 -0.86606404 -0.86606404 -0.86606404  0.48448916
#>  [769]  0.14142146 -0.72599927 -0.80677703 -0.80677703 -0.80677703 -0.80677703
#>  [775] -0.80677703  1.64083170  1.19111643 -0.09096051 -0.09096051 -0.09096051
#>  [781] -0.09096051  0.05141237  0.05141237  0.05141237 -0.31184331 -0.31184331
#>  [787] -0.70839243 -0.55322157 -0.55322157 -0.55322157 -0.55322157 -0.55322157
#>  [793] -1.32341806 -1.32341806  0.60652842  0.60652842  0.60652842  1.29163234
#>  [799]  1.29163234 -0.09962669 -0.09962669 -0.09297328 -0.09297328 -0.09297328
#>  [805] -0.17350302  1.39571382  0.66668637  0.88953232  0.88953232  0.24389880
#>  [811]  0.24389880  0.24389880  0.24389880  0.24389880  0.24389880 -0.45940994
#>  [817] -0.45940994 -1.08497018 -0.58398424 -0.58398424 -1.20946869 -1.37810386
#>  [823] -1.37810386 -1.37810386 -0.23268030 -0.91937874 -0.91937874 -0.70035948
#>  [829]  0.61509111  0.47035990  0.47035990  0.47035990 -0.16678955 -0.16678955
#>  [835]  0.33687146  0.33687146  0.33687146  0.33687146 -0.68537149 -0.68537149
#>  [841] -1.09370062 -1.19977919 -1.19977919 -1.19977919 -1.19977919 -0.31698356
#>  [847] -0.31698356  0.32882779  0.32882779  0.32882779  0.32882779  0.32882779
#>  [853]  0.32882779  0.32882779  0.73353166  0.73353166  0.73353166  0.73353166
#>  [859]  1.74253800 -0.43340048  0.14896832  0.19675584  0.19675584  0.19675584
#>  [865]  0.19675584  1.43227269 -0.96282149 -0.89461468 -0.89461468 -0.40021410
#>  [871] -0.40021410 -0.40021410 -0.40021410  1.53746597  1.53746597 -0.09196008
#>  [877] -0.09196008  1.03081877  1.03081877  1.03081877  1.03081877 -0.05799783
#>  [883] -0.05799783 -0.05799783  0.70682644  0.70682644  0.70682644  0.70682644
#>  [889]  0.70682644  0.70682644  0.70682644  0.27249879  0.27249879  1.20431744
#>  [895] -0.29244589 -0.29244589 -0.29244589 -1.33840263 -1.33840263 -1.28198156
#>  [901]  0.32378528  0.32378528  0.32378528  0.32378528  0.32378528  0.32378528
#>  [907]  0.32378528  0.32378528  0.32378528  0.32378528  0.32378528  0.64010579
#>  [913]  0.64010579 -0.57657293 -1.22434960 -0.55651943 -0.55651943 -0.55651943
#>  [919] -0.55651943 -0.49799503 -0.49799503 -0.15601487 -0.15601487 -0.15601487
#>  [925] -0.15601487  0.74863402  0.27446703 -2.11972924 -1.32515905 -1.31853568
#>  [931] -1.31853568 -1.48071752 -0.22659916  0.67149164  0.99398371  0.99398371
#>  [937]  0.04216253  0.04216253  0.04216253  0.04216253  0.04216253  0.04216253
#>  [943]  0.04216253 -0.33002222 -0.95334323 -0.23657234  0.77444100  0.77444100
#>  [949]  0.77444100  0.68308846  0.68308846  0.55625924  0.55625924  0.55625924
#>  [955] -0.82631587  0.26768655  0.16414982  0.28839090  0.28839090  0.28839090
#>  [961]  0.28839090  0.51932029 -0.45970202 -0.45970202 -0.43790846  1.38188532
#>  [967]  1.48292283  1.48292283  0.43330567  0.43330567  0.43330567  0.43330567
#>  [973]  0.43330567  0.43330567  0.43330567  0.43330567  0.43330567  0.43330567
#>  [979]  0.43330567  0.43330567  0.43330567  0.32047068  0.21430214 -1.71598913
#>  [985] -1.71598913 -1.71598913 -1.35498237 -1.35498237 -1.35696720 -1.35696720
#>  [991] -1.35696720  0.58405897 -0.52240749 -0.26228824 -0.26228824  1.79724093
#>  [997]  1.79724093  0.64299163  0.64299163 -0.20188108
#> 
#> $alpha1
#>    [1] 1.0801140 1.4604473 1.4604473 0.9157705 0.9157705 0.5600373 0.5600373
#>    [8] 0.7333478 0.6241856 0.8626709 0.8626709 0.8626709 0.8626709 0.8626709
#>   [15] 0.8626709 0.8626709 0.8626709 0.8656493 0.8656493 0.8656493 0.8656493
#>   [22] 1.1711694 1.1711694 1.1711694 1.6718157 1.6718157 1.6718157 1.6718157
#>   [29] 1.6718157 1.0303429 1.1662042 1.1662042 1.1662042 0.8048900 0.8048900
#>   [36] 0.8048900 0.8048900 1.1339016 1.1339016 1.1339016 1.1173079 1.1173079
#>   [43] 2.3128285 1.3811779 1.3811779 1.3811779 1.3811779 1.3811779 1.3811779
#>   [50] 0.4729934 0.9065653 0.9065653 2.4080099 2.4080099 2.4080099 2.4080099
#>   [57] 2.3174045 2.3174045 1.2799792 1.2799792 0.7704339 0.7704339 0.7704339
#>   [64] 0.7704339 0.8031819 0.5501540 0.5501540 1.6754992 1.4293850 0.8125538
#>   [71] 0.8125538 0.8125538 1.4002368 1.4002368 1.4002368 1.5175199 1.5175199
#>   [78] 1.5175199 0.2957931 0.2957931 0.2957931 0.7179938 0.7179938 1.2330817
#>   [85] 0.6088124 0.4276380 0.4276380 0.4276380 0.3689678 0.6771415 0.6899537
#>   [92] 0.6899537 0.7359815 1.6558853 2.2688808 2.2688808 2.2688808 0.8132544
#>   [99] 0.8132544 0.8132544 0.8132544 0.6963654 0.6963654 0.7754449 0.7754449
#>  [106] 1.2256238 1.2256238 1.2256238 1.2256238 1.2256238 1.2256238 1.2109257
#>  [113] 1.2109257 1.0280017 1.0280017 0.5362168 0.6586065 0.6586065 0.6586065
#>  [120] 0.6586065 0.6509960 1.1366263 1.6408809 1.6408809 1.6408809 1.8092354
#>  [127] 1.0151055 0.9792224 0.9792224 0.9792224 1.3411453 1.3411453 1.3411453
#>  [134] 1.3411453 1.3411453 1.3411453 1.3411453 1.3411453 1.4859080 1.1472319
#>  [141] 1.1472319 1.1472319 1.1472319 0.8046092 1.8095593 1.8095593 1.2822143
#>  [148] 1.2455853 1.2455853 1.2455853 1.2455853 1.2455853 1.2455853 0.7883502
#>  [155] 0.7883502 0.7883502 0.7883502 0.7883502 3.1173814 3.1173814 0.3793676
#>  [162] 0.3793676 0.3793676 0.7728113 0.7728113 0.7728113 0.7728113 0.7728113
#>  [169] 0.7712782 1.8828923 0.4524951 0.4524951 0.4524951 0.8025408 1.4982853
#>  [176] 1.4982853 1.4982853 1.4982853 1.4982853 1.5028098 1.5028098 1.1999225
#>  [183] 1.3587304 1.2191270 1.2191270 0.8919403 0.8919403 0.8919403 0.8919403
#>  [190] 1.0436456 0.7740972 0.9520353 1.9716732 1.6168823 0.5670942 0.5670942
#>  [197] 0.5670942 0.4717316 0.4717316 0.4299632 0.4299632 0.4299632 0.4299632
#>  [204] 0.2790456 0.2790456 0.4983355 0.4983355 0.4983355 0.5378103 0.5378103
#>  [211] 0.3638125 1.7525131 1.7525131 1.7525131 1.7525131 1.7525131 1.9186050
#>  [218] 1.9186050 1.9186050 0.3669710 0.2907256 0.6232220 0.6232220 0.9017443
#>  [225] 0.9017443 0.9017443 0.9017443 0.9017443 0.7480076 0.7863654 0.6986258
#>  [232] 0.6986258 0.5686186 0.9699029 0.9699029 0.9699029 0.9699029 0.9699029
#>  [239] 0.9699029 0.9675216 0.9675216 0.9675216 0.9675216 0.9675216 1.5081617
#>  [246] 1.5081617 1.5081617 0.8755490 1.0280949 1.0280949 1.1593912 1.1593912
#>  [253] 0.9151683 0.9151683 0.9151683 0.6916215 2.0450050 2.0450050 3.6472324
#>  [260] 1.0987289 2.2420611 2.2420611 2.2420611 2.2420611 2.2420611 1.1297402
#>  [267] 1.1297402 1.1297402 1.2998072 0.9880309 2.0004249 2.0004249 0.7020316
#>  [274] 0.7020316 2.1004354 2.1004354 0.5481145 0.6939392 0.6939392 0.7497565
#>  [281] 0.7497565 0.7497565 0.4383105 0.5911621 0.5911621 0.6943728 0.6943728
#>  [288] 2.1551041 2.1551041 2.1551041 1.2450610 1.2450610 1.2450610 1.2450610
#>  [295] 0.5723412 0.5723412 1.7108407 1.7108407 1.8020542 1.5552684 1.2212624
#>  [302] 1.2183872 1.2183872 1.2183872 1.2183872 1.2050677 0.8998476 1.1671314
#>  [309] 1.1671314 1.1671314 1.1671314 1.1671314 1.1671314 0.7703910 0.3356932
#>  [316] 0.3356932 0.5321503 0.7356609 2.4349909 0.7781121 0.7781121 0.7781121
#>  [323] 0.7361371 1.5074106 1.5074106 1.5074106 0.7717389 0.7717389 0.7717389
#>  [330] 0.7717389 0.7717389 0.7717389 0.7717389 0.7717389 0.7717389 0.7717389
#>  [337] 0.7717389 0.7717389 0.7717389 1.2666643 1.2666643 1.2666643 1.2666643
#>  [344] 1.2666643 1.2666643 0.9700270 1.5383694 1.0795408 1.0795408 2.2994636
#>  [351] 0.3338347 0.5769165 1.8696041 1.8696041 2.0457706 2.0457706 2.0457706
#>  [358] 1.8481208 1.8481208 1.8481208 1.8481208 1.8481208 1.4908419 1.3186579
#>  [365] 1.3186579 1.3186579 1.3186579 2.0353214 0.2686190 1.3962509 1.1887748
#>  [372] 1.7430747 1.7430747 1.7430747 1.7619895 1.7619895 1.7619895 1.7619895
#>  [379] 1.7619895 1.3247448 1.3089526 2.3315099 1.0587263 0.4933469 0.4933469
#>  [386] 1.1085622 0.6270788 0.6270788 0.6270788 1.4887295 1.4468289 1.4468289
#>  [393] 1.4468289 1.4468289 1.4758990 1.4758990 0.5938508 0.5938508 0.5938508
#>  [400] 0.5938508 0.5938508 0.5938508 0.5938508 1.3329019 1.3329019 1.3329019
#>  [407] 1.9445443 1.9445443 1.9445443 0.8376373 0.8025559 1.6010647 1.6010647
#>  [414] 1.6010647 0.9529138 0.9529138 0.8652674 0.8652674 0.8652674 0.8652674
#>  [421] 0.8652674 0.8652674 2.0258648 2.0258648 2.0258648 2.0258648 1.4826485
#>  [428] 1.4826485 1.1413456 1.1413456 1.1413456 1.1413456 1.1413456 1.1413456
#>  [435] 1.6344546 1.0257609 1.1049605 1.1049605 1.2814603 1.1326377 1.1326377
#>  [442] 1.1326377 1.7105851 1.3519125 1.3519125 1.3519125 1.3519125 1.3519125
#>  [449] 1.3519125 1.3519125 1.3519125 1.3519125 1.3519125 0.4138660 0.4138660
#>  [456] 0.4676205 0.4463029 0.4463029 1.0761081 1.9800697 1.3423351 1.3423351
#>  [463] 1.3423351 1.3423351 1.7763504 1.7763504 1.7763504 0.4498293 0.4498293
#>  [470] 0.6462055 0.6462055 0.6462055 0.6462055 0.6462055 0.6462055 1.8364507
#>  [477] 1.8364507 1.8364507 1.8364507 1.8364507 1.8364507 1.8364507 1.8364507
#>  [484] 1.8364507 1.8364507 0.6379918 0.6379918 2.7543795 2.7543795 2.7543795
#>  [491] 0.9673501 0.9673501 0.9673501 0.8915614 0.8421060 0.5977363 3.3866179
#>  [498] 3.3866179 5.8428861 5.8428861 5.8428861 0.5761386 0.3520395 0.4289316
#>  [505] 0.2744229 0.5098727 0.5098727 0.3431012 0.3431012 0.7555910 0.7555910
#>  [512] 0.7555910 0.7555910 0.6062903 0.6062903 0.6552780 0.6382721 0.6382721
#>  [519] 0.6382721 0.6382721 0.6382721 0.6382721 0.6382721 0.6382721 0.6074271
#>  [526] 0.6074271 2.9265507 2.4878340 2.4878340 2.4878340 2.4878340 2.0116742
#>  [533] 2.0116742 2.0116742 1.4039200 1.4039200 1.0405836 1.8093428 0.6788437
#>  [540] 0.6788437 0.6788437 0.6802384 0.6802384 0.6802384 0.6802384 0.6802384
#>  [547] 1.2440502 1.2440502 1.2440502 1.2440502 1.2440502 1.2440502 1.2440502
#>  [554] 1.2440502 1.2440502 1.2440502 0.4770365 0.4770365 0.7709315 0.7706375
#>  [561] 1.0355426 2.0303401 1.3347583 1.3347583 0.9462129 0.9462129 0.9462129
#>  [568] 0.9462129 0.8969201 1.6262546 1.6262546 1.6262546 1.2543611 1.2543611
#>  [575] 0.9496132 0.9496132 0.5332837 0.9038680 0.9038680 0.4892038 2.1783302
#>  [582] 2.1783302 2.1783302 1.7341786 1.7341786 1.7341786 1.7341786 1.7341786
#>  [589] 1.6522140 1.6522140 0.9944694 0.9944694 0.9050672 1.6280504 0.7144422
#>  [596] 0.7144422 1.3061485 1.3061485 1.3061485 1.2076810 1.2076810 1.2076810
#>  [603] 1.2076810 1.2076810 1.2076810 1.7596156 1.5621424 1.5621424 1.5621424
#>  [610] 1.6348714 1.1137770 1.1137770 1.5478468 1.5478468 1.3700381 1.3700381
#>  [617] 1.3700381 1.3700381 1.3700381 1.3700381 1.3700381 1.3700381 1.3700381
#>  [624] 1.0539413 1.0539413 1.0539413 1.5824626 1.3579151 1.3579151 0.8826645
#>  [631] 1.0655646 1.0655646 1.0655646 1.0655646 1.0655646 1.0655646 0.4518799
#>  [638] 0.4518799 0.4518799 2.3556443 2.3556443 0.8216131 0.8216131 0.7117804
#>  [645] 1.5337255 1.5337255 1.5337255 1.5125763 1.5760570 1.0705745 1.0705745
#>  [652] 0.8466585 1.2623938 1.2623938 1.9657649 1.9657649 1.9657649 0.9319478
#>  [659] 0.9319478 0.9319478 0.8537318 0.8537318 0.8537318 2.0487343 2.0487343
#>  [666] 2.0487343 1.3229093 1.3229093 1.3229093 1.3229093 1.3229093 0.4948018
#>  [673] 0.8472148 0.8472148 0.8472148 0.8472148 0.8472148 0.8472148 0.8472148
#>  [680] 0.6106158 0.3403461 0.4588739 0.4588739 0.7670929 0.8085974 2.3075297
#>  [687] 2.3075297 2.3075297 2.3075297 2.3075297 2.2070216 2.2070216 0.2785543
#>  [694] 2.5808101 2.0905719 0.3207048 1.8871209 1.8871209 1.8871209 0.7781949
#>  [701] 0.7151014 0.7151014 0.7151014 0.7151014 1.0716233 1.0716233 1.0716233
#>  [708] 1.0716233 1.0716233 0.9196835 0.9196835 0.9196835 0.9196835 0.9196835
#>  [715] 0.9196835 0.9196835 0.9196835 1.0312319 1.0312319 1.0312319 1.0312319
#>  [722] 1.2110609 1.2110609 2.2988390 2.1156835 0.7612747 0.8020218 1.1597704
#>  [729] 1.5873439 1.5873439 1.5873439 1.5873439 1.1209776 1.1209776 1.1209776
#>  [736] 1.1209776 1.3937175 1.0676781 0.9581684 0.9581684 0.9581684 0.9581684
#>  [743] 0.9581684 0.9581684 0.9581684 0.9581684 0.9581684 1.0420279 1.8161563
#>  [750] 1.8161563 1.8161563 1.8161563 1.8161563 1.2665613 1.5682660 1.5682660
#>  [757] 1.5682660 1.7025796 1.7025796 1.7025796 1.7025796 1.1341069 1.1341069
#>  [764] 1.1341069 0.9337996 0.9337996 0.9337996 0.9546267 0.4371718 2.1318473
#>  [771] 1.5208558 1.5208558 1.5208558 1.5208558 1.5208558 2.0569019 2.3532387
#>  [778] 1.6243905 1.6243905 1.6243905 1.6243905 0.6254651 0.6254651 0.6254651
#>  [785] 0.6314442 0.6314442 0.9662365 1.5056745 1.5056745 1.5056745 1.5056745
#>  [792] 1.5056745 1.0411508 1.0411508 0.7060943 0.7060943 0.7060943 0.9253766
#>  [799] 0.9253766 2.8726402 2.8726402 0.5583266 0.5583266 0.5583266 0.4499673
#>  [806] 1.0820724 0.5429813 1.9211328 1.9211328 0.6109172 0.6109172 0.6109172
#>  [813] 0.6109172 0.6109172 0.6109172 0.8703632 0.8703632 0.5002878 0.2961392
#>  [820] 0.2961392 0.5560035 0.7400570 0.7400570 0.7400570 0.8164783 1.1249197
#>  [827] 1.1249197 1.0365964 1.6390259 0.6764843 0.6764843 0.6764843 1.4083279
#>  [834] 1.4083279 0.8367933 0.8367933 0.8367933 0.8367933 0.4372302 0.4372302
#>  [841] 0.5880166 1.6710980 1.6710980 1.6710980 1.6710980 0.6191676 0.6191676
#>  [848] 1.1599923 1.1599923 1.1599923 1.1599923 1.1599923 1.1599923 1.1599923
#>  [855] 1.1105224 1.1105224 1.1105224 1.1105224 1.1649512 1.5130365 2.2639520
#>  [862] 1.7579833 1.7579833 1.7579833 1.7579833 1.2455489 0.3248515 0.3243064
#>  [869] 0.3243064 1.4721577 1.4721577 1.4721577 1.4721577 1.5322678 1.5322678
#>  [876] 1.3315476 1.3315476 1.3578207 1.3578207 1.3578207 1.3578207 1.7455332
#>  [883] 1.7455332 1.7455332 0.6979168 0.6979168 0.6979168 0.6979168 0.6979168
#>  [890] 0.6979168 0.6979168 2.0462401 2.0462401 1.4932767 1.0327661 1.0327661
#>  [897] 1.0327661 0.6678664 0.6678664 0.7897728 1.1060402 1.1060402 1.1060402
#>  [904] 1.1060402 1.1060402 1.1060402 1.1060402 1.1060402 1.1060402 1.1060402
#>  [911] 1.1060402 1.3373004 1.3373004 0.7090492 0.9241246 0.8849720 0.8849720
#>  [918] 0.8849720 0.8849720 1.2431592 1.2431592 0.8396717 0.8396717 0.8396717
#>  [925] 0.8396717 2.3897238 3.9147407 1.3887260 0.9520550 0.9575041 0.9575041
#>  [932] 0.7203345 0.5294677 0.3150533 0.7191739 0.7191739 0.3794426 0.3794426
#>  [939] 0.3794426 0.3794426 0.3794426 0.3794426 0.3794426 0.2967898 1.0120864
#>  [946] 0.7482136 1.3911240 1.3911240 1.3911240 1.0348771 1.0348771 0.9369310
#>  [953] 0.9369310 0.9369310 1.1270542 1.0793691 2.4878588 1.9385555 1.9385555
#>  [960] 1.9385555 1.9385555 1.0786923 0.6371945 0.6371945 0.4078447 1.5973162
#>  [967] 1.1638861 1.1638861 0.9712050 0.9712050 0.9712050 0.9712050 0.9712050
#>  [974] 0.9712050 0.9712050 0.9712050 0.9712050 0.9712050 0.9712050 0.9712050
#>  [981] 0.9712050 2.3229822 1.5332133 1.6071242 1.6071242 1.6071242 0.1806943
#>  [988] 0.1806943 1.4284445 1.4284445 1.4284445 2.1243512 0.1883033 0.4500858
#>  [995] 0.4500858 1.6878983 1.6878983 2.7524134 2.7524134 3.1754708
#> 
#> 
#> Slot "options":
#> An object of class "McmcOptions"
#> Slot "iterations":
#> [1] 2100
#> 
#> Slot "burnin":
#> [1] 100
#> 
#> Slot "step":
#> [1] 2
#> 
#> Slot "rng_kind":
#> [1] NA
#> 
#> Slot "rng_seed":
#> [1] NA
#> 
#> 
# Create some data from the class `DataDual`.
plcb <- 0.001
my_data <- DataDual(
  w = c(13, 77, 86, 26, 27, 36, 37, 97, 21, 49, 87, 48),
  x = c(plcb, 25, 25, 25, plcb, 50, 50, 50, plcb, 100, 100, 100),
  y = c(0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 1L, 0L),
  doseGrid = c(plcb, seq(25, 300, 25)),
  placebo = TRUE,
  ID = 1:12,
  cohort = c(1L, 1L, 1L, 1L, 2L, 2L, 2L, 2L, 3L, 3L, 3L, 3L)
)

# Initialize the CRM model.
my_model <- DualEndpointRW(
  mean = c(0, 1),
  cov = matrix(c(1, 0, 0, 1), nrow = 2),
  sigma2W = c(a = 0.1, b = 0.1),
  rho = c(a = 1, b = 1),
  sigma2betaW = 0.01,
  rw1 = TRUE
)

# Sample from the posterior distribution.
my_options <- McmcOptions(
  burnin = 50,
  step = 2,
  samples = 4,
  rng_kind = "Mersenne-Twister",
  rng_seed = 1
)

samples <- mcmc(data = my_data, model = my_model, options = my_options)
samples
#> An object of class "Samples"
#> Slot "data":
#> $betaW
#>          [,1]     [,2]     [,3]     [,4]     [,5]     [,6]     [,7]     [,8]
#> [1,] 43.97979 44.41466 44.43972 44.11392 44.62213 45.16043 45.16812 45.21349
#> [2,] 43.15657 42.91989 43.51310 44.68803 44.56862 44.87953 44.94821 45.51928
#> [3,] 63.68104 63.29789 63.85898 64.05148 63.52357 64.10696 64.75609 65.32082
#> [4,] 50.45590 49.98192 49.94248 50.23495 50.54648 50.68016 51.02047 50.21193
#>          [,9]    [,10]    [,11]    [,12]    [,13]
#> [1,] 45.17819 44.50411 44.97736 44.98087 45.22721
#> [2,] 45.87216 45.26223 45.42696 45.75288 45.95267
#> [3,] 65.62907 65.52253 66.59065 66.42558 66.77227
#> [4,] 50.02701 49.17010 49.01135 49.45278 49.73688
#> 
#> $betaZ
#>           [,1]       [,2]
#> [1,] -2.507907 0.03496807
#> [2,] -2.507907 0.03496807
#> [3,] -2.507907 0.03496807
#> [4,] -2.507907 0.03496807
#> 
#> $delta
#>            [,1]        [,2]       [,3]       [,4]      [,5]        [,6]
#> [1,]  0.4348687  0.02505645 -0.3258029  0.5082169 0.5382963 0.007687938
#> [2,] -0.2366798  0.59321185  1.1749236 -0.1194105 0.3109172 0.068670722
#> [3,] -0.3831418  0.56109098  0.1924961 -0.5279107 0.5833939 0.649129673
#> [4,] -0.4739807 -0.03943816  0.2924624  0.3115307 0.1336790 0.340314130
#>             [,7]        [,8]       [,9]      [,10]        [,11]     [,12]
#> [1,]  0.04537578 -0.03529845 -0.6740836  0.4732525  0.003504127 0.2463430
#> [2,]  0.57107036  0.35288467 -0.6099253  0.1647277  0.325915901 0.1997869
#> [3,]  0.56472919  0.30824406 -0.1065357  1.0681196 -0.165072414 0.3466892
#> [4,] -0.80854374 -0.18491804 -0.8569132 -0.1587477  0.441429357 0.2841035
#> 
#> $precW
#> [1] 0.0007380298 0.0009402290 0.0006374998 0.0006963610
#> 
#> $rho
#> [1] 0.1193680 0.1129187 0.2440825 0.1499421
#> 
#> 
#> Slot "options":
#> An object of class "McmcOptions"
#> Slot "iterations":
#> [1] 58
#> 
#> Slot "burnin":
#> [1] 50
#> 
#> Slot "step":
#> [1] 2
#> 
#> Slot "rng_kind":
#> [1] "base::Mersenne-Twister"
#> 
#> Slot "rng_seed":
#> [1] 1
#> 
#> 
# Create some data from the class `DataDual`.
plcb <- 0.001
my_data <- DataDual(
  w = c(13, 77, 86, 26, 27, 36, 37, 97, 21, 49, 87, 48),
  x = c(plcb, 25, 25, 25, plcb, 50, 50, 50, plcb, 100, 100, 100),
  y = c(0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 1L, 0L),
  doseGrid = c(plcb, seq(25, 300, 25)),
  placebo = TRUE,
  ID = 1:12,
  cohort = c(1L, 1L, 1L, 1L, 2L, 2L, 2L, 2L, 3L, 3L, 3L, 3L)
)

# Initialize the CRM model.
my_model <- DualEndpointBeta(
  mean = c(0, 1),
  cov = diag(2),
  ref_dose = 2,
  use_log_dose = FALSE,
  sigma2W = c(a = 1, b = 2),
  rho = c(a = 1.5, b = 2.5),
  E0 = 2,
  Emax = 50,
  delta1 = 6,
  mode = 9,
  ref_dose_beta = my_data@doseGrid[my_data@nGrid] + 10
)

# Sample from the posterior distribution.
my_options <- McmcOptions(
  burnin = 50,
  step = 2,
  samples = 4,
  rng_kind = "Mersenne-Twister",
  rng_seed = 1
)

samples <- mcmc(data = my_data, model = my_model, options = my_options)
samples
#> An object of class "Samples"
#> Slot "data":
#> $betaW
#>      [,1]     [,2] [,3] [,4] [,5] [,6] [,7] [,8] [,9] [,10] [,11] [,12] [,13]
#> [1,]    2 2.383076    2    2    2    2    2    2    2     2     2     2     2
#> [2,]    2 2.383076    2    2    2    2    2    2    2     2     2     2     2
#> [3,]    2 2.383076    2    2    2    2    2    2    2     2     2     2     2
#> [4,]    2 2.383076    2    2    2    2    2    2    2     2     2     2     2
#> 
#> $betaZ
#>           [,1]       [,2]
#> [1,] -4.354759 0.09035452
#> [2,] -4.354759 0.09035452
#> [3,] -4.354759 0.09035452
#> [4,] -3.273111 0.08172139
#> 
#> $precW
#> [1] 0.0004229406 0.0004149886 0.0004264222 0.0003413195
#> 
#> $rho
#> [1] -0.5116824 -0.5902350 -0.5709147 -0.5230612
#> 
#> 
#> Slot "options":
#> An object of class "McmcOptions"
#> Slot "iterations":
#> [1] 58
#> 
#> Slot "burnin":
#> [1] 50
#> 
#> Slot "step":
#> [1] 2
#> 
#> Slot "rng_kind":
#> [1] "base::Mersenne-Twister"
#> 
#> Slot "rng_seed":
#> [1] 1
#> 
#> 
##obtain mcmc DLE samples given the data, LogisticIndepBeta (DLE model) and mcmc simulations options
## data must be of 'Data' class
data <- Data(
  x = c(25, 50, 50, 75, 100, 100, 225, 300),
  y = c(0, 0, 0, 0, 1, 1, 1, 1),
  doseGrid = seq(25, 300, 25)
)
#> Used default patient IDs!
#> Used best guess cohort indices!
## model must be of 'LogisticIndepBeta' class
model <- LogisticIndepBeta(
  binDLE = c(1.05, 1.8),
  DLEweights = c(3, 3),
  DLEdose = c(25, 300),
  data = data
)
## options must be ''McmcOptions' class
options <- McmcOptions(burnin = 100, step = 2, samples = 200)
set.seed(94)
samples <- mcmc(data = data, model = model, options = options)
# nolint start
##obtain mcmc efficacy samples given the data, 'Effloglog' model (efficacy model) and
## mcmc simulations options data must be of 'DataDual' class
data <- DataDual(
  x = c(25, 50, 25, 50, 75, 300, 250, 150),
  y = c(0, 0, 0, 0, 0, 1, 1, 0),
  w = c(0.31, 0.42, 0.59, 0.45, 0.6, 0.7, 0.6, 0.52),
  doseGrid = seq(25, 300, 25),
  placebo = FALSE
)
#> Used default patient IDs!
#> Used best guess cohort indices!
## model must be of 'Effloglog' class
Effmodel <- Effloglog(
  eff = c(1.223, 2.513),
  eff_dose = c(25, 300),
  nu = c(a = 1, b = 0.025),
  data = data
)

## options must be ''McmcOptions' class
options <- McmcOptions(burnin = 100, step = 2, samples = 200)
set.seed(94)
samples <- mcmc(data = data, model = Effmodel, options = options)
# nolint end
## obtain mcmc efficacy samples given the data, 'EffFlexi' model (efficacy model) and
## mcmc simulations options
## data must be of 'DataDual' class
data <- DataDual(
  x = c(25, 50, 25, 50, 75, 300, 250, 150),
  y = c(0, 0, 0, 0, 0, 1, 1, 0),
  w = c(0.31, 0.42, 0.59, 0.45, 0.6, 0.7, 0.6, 0.52),
  doseGrid = seq(25, 300, 25)
)
#> Used default patient IDs!
#> Used best guess cohort indices!
## model must be of 'EffFlexi' class

effmodel <- EffFlexi(
  eff = c(1.223, 2.513),
  eff_dose = c(25, 300),
  sigma2W = c(a = 0.1, b = 0.1),
  sigma2betaW = c(a = 20, b = 50),
  rw1 = FALSE,
  data = data
)

## options must be ''McmcOptions' class
options <- McmcOptions(burnin = 100, step = 2, samples = 200)
set.seed(94)
samples <- mcmc(data = data, model = effmodel, options = options)
ordinal_data <- .DefaultDataOrdinal()
ordinal_model <- .DefaultLogisticLogNormalOrdinal()
mcmc_options <- .DefaultMcmcOptions()

samples <- mcmc(ordinal_data, ordinal_model, mcmc_options)
```
