v2.2.0/reference/mcmc.md
# Obtaining Posterior Samples for all Model Parameters

**\[stable\]**

This is the function that actually runs the `JAGS` MCMC machinery to
produce posterior samples from all model parameters and required derived
values. It is a generic function, so that customized versions may be
conveniently defined for specific subclasses of
[`GeneralData`](https://docs.crmpack.org/reference/GeneralData-class.md),
[`GeneralModel`](https://docs.crmpack.org/reference/GeneralModel-class.md),
and
[`McmcOptions`](https://docs.crmpack.org/reference/McmcOptions-class.md)
input.

## Usage

``` r
mcmc(data, model, options, ...)

# S4 method for class 'GeneralData,GeneralModel,McmcOptions'
mcmc(data, model, options, from_prior = data@nObs == 0L, ...)

# S4 method for class 'DataCombo,TwoDrugsCombo,McmcOptions'
mcmc(data, model, options, from_prior = data@nObs == 0L, ...)

# S4 method for class 'HierarchicalData,HierarchicalModel,McmcOptions'
mcmc(
  data,
  model,
  options,
  from_prior = all(vapply(data@arms, function(arm) arm@nObs == 0L, logical(1L))),
  ...
)

# S4 method for class 'GeneralData,DualEndpointRW,McmcOptions'
mcmc(data, model, options, from_prior = data@nObs == 0L, ...)

# S4 method for class 'GeneralData,DualEndpointBeta,McmcOptions'
mcmc(data, model, options, from_prior = data@nObs == 0L, ...)

# S4 method for class 'GeneralData,DualEndpointEmax,McmcOptions'
mcmc(data, model, options, from_prior = data@nObs == 0L, ...)

# S4 method for class 'GeneralData,OneParLogNormalPrior,McmcOptions'
mcmc(data, model, options, from_prior = data@nObs == 0L, ...)

# S4 method for class 'GeneralData,OneParExpPrior,McmcOptions'
mcmc(data, model, options, from_prior = data@nObs == 0L, ...)

# S4 method for class 'DataMixture,GeneralModel,McmcOptions'
mcmc(
  data,
  model,
  options,
  from_prior = data@nObs == 0L & data@nObsshare == 0L,
  ...
)

# S4 method for class 'Data,LogisticIndepBeta,McmcOptions'
mcmc(data, model, options, ...)

# S4 method for class 'DataDual,Effloglog,McmcOptions'
mcmc(data, model, options, ...)

# S4 method for class 'DataDual,EffFlexi,McmcOptions'
mcmc(data, model, options, ...)

# S4 method for class 'DataOrdinal,LogisticLogNormalOrdinal,McmcOptions'
mcmc(data, model, options, ...)
```

## Arguments

- data:

  (`GeneralData`)\
  an input data.

- model:

  (`GeneralModel`)\
  an input model.

- options:

  (`McmcOptions`)\
  MCMC options.

- ...:

  not used.

- from_prior:

  (`flag`)\
  sample from the prior only? Default to `TRUE` when number of
  observations in `data` is `0`. For some models it might be necessary
  to specify it manually here though.

## Value

The posterior samples, an object of class
[`Samples`](https://docs.crmpack.org/reference/Samples-class.md).

## Functions

- `mcmc(data = GeneralData, model = GeneralModel, options = McmcOptions)`:
  Standard method which uses JAGS.

- `mcmc(data = DataCombo, model = TwoDrugsCombo, options = McmcOptions)`:
  Standard method which uses JAGS. For the
  [`TwoDrugsCombo`](https://docs.crmpack.org/reference/TwoDrugsCombo-class.md)
  model, the drug names in the model and data must agree.

- `mcmc(data = HierarchicalData, model = HierarchicalModel, options = McmcOptions)`:
  Standard method which uses JAGS for the dynamically compiled
  hierarchical model. Arm names in `data` and `model` must agree, and
  combination-arm drug names must match as well.

- `mcmc(data = GeneralData, model = DualEndpointRW, options = McmcOptions)`:
  Standard method which uses JAGS. For the
  [`DualEndpointRW`](https://docs.crmpack.org/reference/DualEndpointRW-class.md)
  model, it is required that there are at least two (in case of random
  walk prior of the first order on the biomarker level) or three doses
  in the grid.

- `mcmc(data = GeneralData, model = DualEndpointBeta, options = McmcOptions)`:
  Standard method which uses JAGS. For the
  [`DualEndpointBeta`](https://docs.crmpack.org/reference/DualEndpointBeta-class.md)
  model, it is required that the value of `ref_dose_beta` slot is
  greater than the maximum dose in a grid. This requirement comes from
  definition of the beta function that is used to model dose-biomarker
  relationship in
  [`DualEndpointBeta`](https://docs.crmpack.org/reference/DualEndpointBeta-class.md)
  model. The other requirement is that there must be at least one dose
  in the grid.

- `mcmc(data = GeneralData, model = DualEndpointEmax, options = McmcOptions)`:
  Standard method which uses JAGS. For the
  [`DualEndpointEmax`](https://docs.crmpack.org/reference/DualEndpointEmax-class.md)
  model, it is required that there is at least one dose in the grid.

- `mcmc(data = GeneralData, model = OneParLogNormalPrior, options = McmcOptions)`:
  Standard method which uses JAGS. For the
  [`OneParLogNormalPrior`](https://docs.crmpack.org/reference/OneParLogNormalPrior-class.md)
  model, it is required that the length of skeleton prior probabilities
  vector should be equal to the length of the number of doses.

- `mcmc(data = GeneralData, model = OneParExpPrior, options = McmcOptions)`:
  Standard method which uses JAGS. For the
  [`OneParExpPrior`](https://docs.crmpack.org/reference/OneParExpPrior-class.md)
  model, it is required that the length of skeleton prior probabilities
  vector should be equal to the length of the number of doses.

- `mcmc(data = DataMixture, model = GeneralModel, options = McmcOptions)`:
  Method for
  [`DataMixture`](https://docs.crmpack.org/reference/DataMixture-class.md)
  with different `from_prior` default. Samples from the prior only when
  both the number of observations and the number of shared observations
  are zero.

- `mcmc(data = Data, model = LogisticIndepBeta, options = McmcOptions)`:
  Obtain posterior samples for the model parameters based on the pseudo
  [`LogisticIndepBeta`](https://docs.crmpack.org/reference/LogisticIndepBeta-class.md)
  DLE model. The joint prior and posterior probability density function
  of the intercept \\\phi_1\\ (`phi1`) and the slope \\\phi_2\\ (`phi2`)
  are given in Whitehead and Williamson (1998) . However, since
  asymptotically, the joint posterior probability density will be
  bivariate normal, we use the bivariate normal distribution to generate
  posterior samples of the intercept and the slope parameters. For the
  prior samples of the intercept and the slope, a bivariate normal
  distribution with mean and the covariance matrix given in Whitehead
  and Williamson (1998) is used.

- `mcmc(data = DataDual, model = Effloglog, options = McmcOptions)`:
  Obtain the posterior samples for the model parameters in the
  [`Effloglog`](https://docs.crmpack.org/reference/Effloglog-class.md)
  model. Given the value of \\\nu\\, the precision of the efficacy
  responses, the joint prior or the posterior probability of the
  intercept \\\theta_1\\ (`theta1`) and the slope \\\theta_2\\
  (`theta2`) is a bivariate normal distribution. The \\\nu\\ (`nu`), the
  precision of the efficacy responses is either a fixed value or has a
  gamma distribution. If a gamma distribution is used, the samples of
  `nu` will be first generated. Then the mean of the `nu` samples will
  be used to generate samples of the intercept and slope parameters of
  the model.

- `mcmc(data = DataDual, model = EffFlexi, options = McmcOptions)`:
  Obtain the posterior samples for the estimates in the
  [`EffFlexi`](https://docs.crmpack.org/reference/EffFlexi-class.md)
  model. This is the MCMC procedure based on what is described in Lang
  and Brezger (2004) such that samples of the mean efficacy responses at
  all dose levels, samples of `sigma2` \\\sigma^2\\, the variance of the
  efficacy response and samples of `sigma2betaW`
  \\\sigma^2\_{\beta_W}\\, the variance of the random walk model will be
  generated. Please refer to Lang and Brezger (2004) for the procedures
  and the form of the joint prior and posterior probability density for
  the mean efficacy responses. In addition, both `sigma2` and
  `sigma2betaW` can be fixed or have an inverse-gamma prior and
  posterior distribution. Therefore, if the inverse gamma
  distribution(s) are used, the parameters in the distribution will be
  first updated and then samples of `sigma2` and `sigma2betaW` will be
  generated using the updated parameters.

- `mcmc( data = DataOrdinal, model = LogisticLogNormalOrdinal, options = McmcOptions )`:
  Obtain the posterior samples for the model parameters in the
  [`LogisticLogNormalOrdinal`](https://docs.crmpack.org/reference/LogisticLogNormalOrdinal-class.md)
  model.

  The generic `mcmc` method returns a
  [`Samples`](https://docs.crmpack.org/reference/Samples-class.md)
  object with elements of the `data` slot named `alpha[1]`, `alpha[2]`,
  ..., `alpha[k]` and `beta` when passed a
  [`LogisticLogNormalOrdinal`](https://docs.crmpack.org/reference/LogisticLogNormalOrdinal-class.md)
  object. This makes the "alpha elements" awkward to access and is
  inconsistent with other model objects. So rename the alpha elements to
  `alpha1`, `alpha2`, ..., `alpha<k>` for ease and consistency.

## Note

The type of Random Number Generator (RNG) and its initial seed used by
`JAGS` are taken from the `options` argument. If no initial values are
supplied (i.e RNG kind or seed slot in `options` has `NA`), then they
will be generated automatically by `JAGS`.

## References

Lang S, Brezger A (2004). “Bayesian P-Splines.” *Journal of
Computational and Graphical Statistics*, **13**(1), 183–212. ISSN
10618600,
[doi:10.1198/1061860043010](https://doi.org/10.1198/1061860043010) ,
<http://www.jstor.org/stable/1391151>.\
\
Whitehead J, Williamson D (1998). “Bayesian decision procedures based on
logistic regression models for dose-finding studies.” *Journal of
Biopharmaceutical Statistics*, **8**(3), 445–467.

## Examples

``` r
# Create some data from the class `Data`.
my_data <- Data(
  x = c(0.1, 0.5, 1.5, 3, 6, 10, 10, 10),
  y = c(0, 0, 0, 0, 0, 0, 1, 0),
  doseGrid = c(0.1, 0.5, 1.5, 3, 6, seq(from = 10, to = 80, by = 2))
)
#> Used default patient IDs!
#> Used best guess cohort indices!

# Initialize the CRM model.
my_model <- LogisticLogNormal(
  mean = c(-0.85, 1),
  cov = matrix(c(1, -0.5, -0.5, 1), nrow = 2),
  ref_dose = 56
)

# Sample from the posterior distribution.
my_options <- McmcOptions(
  burnin = 100,
  step = 2,
  samples = 1000
)

samples <- mcmc(data = my_data, model = my_model, options = my_options)
samples
#> An object of class "Samples"
#> Slot "data":
#> $alpha0
#>    [1]  0.0968659806  0.0968659806  0.0968659806  0.0968659806  0.0968659806
#>    [6]  0.0968659806  0.0968659806  0.0968659806 -0.5673849579 -0.5673849579
#>   [11] -0.5673849579 -0.7133224193 -0.7622324165 -0.0965287403 -1.0091836717
#>   [16] -1.0091836717 -1.0091836717 -1.0091836717 -1.0091836717 -1.0573472977
#>   [21] -1.0573472977 -1.7720568013 -0.0772768254 -0.0772768254 -0.7182742795
#>   [26]  0.3316310369 -0.2054099605 -0.2054099605 -0.3318715497 -0.3318715497
#>   [31] -0.3318715497  0.7949883650  0.7949883650  0.7949883650  0.7949883650
#>   [36]  0.7949883650 -0.2488851524 -0.2488851524 -0.3208617350 -1.5235074975
#>   [41]  0.2740072049 -0.1170030169 -1.1049587575 -0.7504372986  0.4533799682
#>   [46] -0.2689199350 -0.9301479888 -0.6131064301  0.0254934964  0.0254934964
#>   [51] -1.0851880605 -0.5426904264 -0.0429713000  0.5909530945  0.5909530945
#>   [56]  0.5909530945  0.5909530945  0.6931000678  0.9141093214 -0.9369383207
#>   [61] -0.9369383207 -0.9369383207  0.5027717011  0.5027717011  0.5027717011
#>   [66] -0.1929573757  0.4468325574  0.1619300468  0.1619300468  0.1619300468
#>   [71]  0.1619300468  0.1619300468  0.4810593255  0.4810593255 -0.0876180085
#>   [76] -0.0876180085 -0.0876180085 -0.0876180085 -0.0876180085 -0.0876180085
#>   [81] -0.0876180085 -0.0876180085  0.3601221216 -0.8634111286 -0.8634111286
#>   [86] -0.8634111286 -0.0889460582 -1.1201465708 -1.1201465708 -0.3693666886
#>   [91] -0.3693666886 -0.3693666886 -0.6107708533 -1.1394977735  0.5368660693
#>   [96]  0.6547232296  0.6547232296 -0.9268847460 -0.9268847460 -0.9268847460
#>  [101] -0.9268847460 -0.9268847460  0.1966499088  0.1966499088  0.1966499088
#>  [106]  0.1966499088  0.1966499088  0.1966499088  0.1966499088 -1.1538860993
#>  [111]  0.6182868637  0.1098721355 -0.7182585868 -0.7182585868 -0.9104979249
#>  [116] -1.5081270070 -0.3325680967 -0.3325680967 -0.3325680967 -0.3325680967
#>  [121] -0.3325680967 -0.8319329797 -0.8319329797 -0.2607617611 -0.2345974799
#>  [126]  0.2702689977  0.2702689977 -0.6768283461  0.1370726275  0.6595766673
#>  [131]  1.2216713767  1.2923044208  1.2923044208  0.8498515461 -0.3422903867
#>  [136] -0.3422903867 -0.2075727670 -0.4720683998 -0.2204130235 -0.2204130235
#>  [141] -0.2204130235 -0.6845247350 -1.3073298858 -0.8712383288 -0.8712383288
#>  [146] -0.8712383288 -0.1402057977 -0.1402057977 -1.5285470517 -1.0018091363
#>  [151] -0.3603243809 -1.1038751730 -1.1038751730 -1.8355140960 -1.8355140960
#>  [156] -1.8355140960 -1.8355140960 -1.8355140960  0.5655698111 -0.1028485248
#>  [161] -0.1028485248 -0.1028485248 -0.1028485248 -0.1028485248 -1.0612031801
#>  [166]  0.6980397109  0.6980397109 -0.1297449604 -0.1297449604 -0.1297449604
#>  [171] -0.1297449604 -0.1297449604 -0.8790774771  0.2843130676  0.2843130676
#>  [176]  0.2639463038  0.2639463038 -0.5046718464  1.6563938128 -0.2153104975
#>  [181]  0.0173867071  0.0173867071  0.0173867071  0.0173867071 -0.1230301188
#>  [186] -0.0151592659  0.2551431078  0.2551431078  0.1619870036  0.4275309079
#>  [191]  0.8619085625  0.6520156628  0.2219968735  1.5176831555  0.2307428701
#>  [196]  0.2307428701 -0.4494723016 -0.4494723016 -0.4494723016  0.9245048650
#>  [201]  0.9253788353  0.9253788353 -0.9231437453 -0.9231437453 -0.9231437453
#>  [206] -0.9231437453 -0.9231437453  0.4032565526 -0.2045393609 -0.2045393609
#>  [211] -0.2045393609 -0.2045393609 -0.2642213703 -0.1329624898 -1.0917986632
#>  [216] -1.0917986632 -0.7354940872 -0.7354940872 -0.7354940872 -0.7354940872
#>  [221] -0.7354940872 -0.7354940872 -0.3272621960 -0.5020867326 -0.5020867326
#>  [226]  0.3723015120 -0.2987456620 -0.2987456620  0.0768144594  0.0768144594
#>  [231]  0.0768144594 -0.7047396815  0.0016746022  0.1768435839  0.1768435839
#>  [236]  0.7540654884  0.4329461435 -0.3298133293 -0.3298133293 -0.3298133293
#>  [241] -0.7360477812  0.1013561059 -0.5083649230 -0.2821068639 -0.2821068639
#>  [246] -0.2821068639 -0.2821068639 -0.2821068639 -0.2821068639 -0.2821068639
#>  [251] -1.4315057936  0.0851056004  0.0851056004  0.0851056004  0.0851056004
#>  [256] -0.7187014060 -0.7187014060 -0.7187014060  0.3390841149 -0.4815882470
#>  [261] -0.9378766123  0.1883769330 -0.8749575620 -0.2433650168 -0.2433650168
#>  [266] -0.2433650168 -0.2433650168  0.8191112088 -1.1434712284 -0.8148204877
#>  [271] -0.4885629059 -0.1511681239 -0.4119800188 -0.4119800188 -0.9526112249
#>  [276]  0.5706509272  0.3302419742  0.3302419742  0.2034569839  0.2034569839
#>  [281] -0.8769360783 -0.4526276301 -0.4526276301 -0.4526276301 -0.4232848587
#>  [286] -0.4232848587 -0.4232848587 -0.4232848587 -0.1144356414 -0.8851160511
#>  [291] -0.0722542312 -0.0722542312 -0.0722542312 -0.0722542312 -0.0722542312
#>  [296] -0.2438729276 -0.2438729276 -1.2776420408 -1.2776420408 -1.5621693673
#>  [301] -1.5621693673 -1.5621693673 -1.5621693673 -1.4555630037 -1.4555630037
#>  [306] -1.4555630037 -0.6315365407  0.2650726681  0.5856247026  0.5856247026
#>  [311] -1.2433082812 -0.9195949482 -0.4907623951 -0.4907623951 -0.4907623951
#>  [316] -0.4907623951 -0.4907623951 -0.4907623951 -0.4907623951 -1.1908039864
#>  [321] -1.1908039864  0.5569443563  0.5569443563 -0.1398951635  0.4232720170
#>  [326]  0.4232720170 -0.7377222768 -0.7377222768 -0.7377222768 -0.1058545190
#>  [331] -0.1058545190 -0.1058545190 -0.1058545190 -0.1058545190  0.7889909688
#>  [336]  0.3264462580 -0.8271919803 -0.0662276054 -0.0662276054 -1.3462807315
#>  [341] -0.0117214022  0.5914653082 -0.0221792227 -0.0221792227  0.0764747814
#>  [346]  0.0764747814  0.1959213236  0.1959213236  0.1959213236 -0.0538355161
#>  [351] -0.0538355161 -0.0538355161 -0.9102578526 -0.9102578526 -1.1024335102
#>  [356] -1.1024335102 -0.9007525614 -0.9007525614 -0.4220856183 -1.9525284942
#>  [361] -1.1976296994  0.1424424029 -0.9903601657 -1.4924873658 -0.7814061199
#>  [366]  0.5302227344  0.5302227344 -0.2550663655 -0.2550663655 -0.2550663655
#>  [371]  1.0733506333  1.3498538520  0.3204854307  0.3204854307  0.3692638389
#>  [376]  0.3692638389  0.3692638389  0.4934753378  0.4934753378  0.4934753378
#>  [381]  0.4934753378 -0.2497091541 -0.2497091541 -0.2599014467 -0.2599014467
#>  [386] -0.2599014467 -0.7709272191  0.0709869076  0.0709869076  0.0709869076
#>  [391]  0.0709869076 -0.9568519395 -0.9568519395  0.1902708267 -0.0928699790
#>  [396] -0.8334847076 -0.8334847076  0.0135236233  0.0135236233  0.0135236233
#>  [401]  0.0135236233  0.0135236233 -0.8277846515  0.2453372468 -1.6969371132
#>  [406] -0.5135895889 -0.5135895889 -0.0287812869 -0.2371760245 -0.1302080242
#>  [411] -0.1302080242 -0.4655935302 -0.7860340381  0.6231284335  0.6231284335
#>  [416]  0.2365480706  1.0483421766  1.0483421766  1.0483421766  1.0483421766
#>  [421]  1.0483421766  1.0483421766  1.0483421766 -0.0978290020  0.2118082625
#>  [426]  0.2118082625  0.2118082625  0.2118082625 -0.2383837795  0.1053050895
#>  [431]  0.1053050895  0.1053050895  0.1053050895  0.1053050895  0.1053050895
#>  [436]  0.1053050895  0.5510917474  0.5510917474 -0.6615983730 -0.0089612473
#>  [441] -0.0089612473 -0.0089612473 -0.0089612473 -0.0089612473 -0.0089612473
#>  [446]  0.1860721276  0.5911796589  0.5911796589  0.0113395525 -1.1737575744
#>  [451] -1.1737575744 -0.3321142691 -0.3321142691 -0.3321142691  0.0363396827
#>  [456]  1.1312017350  1.1312017350  1.1312017350 -0.5668638133 -0.5668638133
#>  [461] -0.3726096520 -0.3726096520 -0.3726096520 -0.3726096520 -0.1772752910
#>  [466] -0.1772752910 -0.1772752910 -0.1772752910 -0.1772752910 -0.1772752910
#>  [471] -0.1772752910 -0.1772752910 -0.1772752910 -1.2352551834 -1.1569106958
#>  [476] -1.1569106958 -0.2858477512 -0.2858477512 -0.2858477512 -0.6415715536
#>  [481] -0.6415715536 -0.4547208296  0.5360998291  0.5360998291  0.5360998291
#>  [486]  0.5360998291  0.5360998291  0.7411154491 -0.2143376189 -0.2143376189
#>  [491] -0.2143376189 -0.2143376189 -0.2143376189 -0.2143376189 -0.2143376189
#>  [496]  0.1905491292  0.3083295247  0.3083295247  0.0004981194  0.0004981194
#>  [501] -0.9038626592 -0.9038626592 -0.9038626592  0.7322771555 -0.1066920308
#>  [506] -0.1066920308 -0.1066920308 -0.0167856223 -0.0167856223  0.0262196628
#>  [511]  0.0262196628  0.0262196628  0.0262196628  0.0262196628  0.0262196628
#>  [516]  0.0262196628 -0.3470780866 -0.3470780866 -0.3470780866 -0.3470780866
#>  [521]  0.3123632415 -0.1145074598 -0.1145074598  0.3433846042 -0.9482450289
#>  [526] -0.9482450289  0.7105859921 -0.0427890709  0.1616796767  0.1616796767
#>  [531]  0.2015782917  0.2015782917  0.2015782917 -0.0879352065 -0.6243291423
#>  [536] -1.0541346080  0.7470375521  0.7470375521  0.7470375521  0.3570600160
#>  [541]  0.3570600160 -0.5333353536 -0.5333353536 -0.5333353536 -0.5333353536
#>  [546]  0.7808418291  0.7808418291  0.7808418291 -0.1415093520  0.0542884478
#>  [551]  0.0542884478 -0.5826377820 -0.1821563496  1.1597035078  1.7510863011
#>  [556]  1.1810072565  1.1810072565 -1.2215990578 -1.2215990578 -1.2215990578
#>  [561] -0.9958236720  0.3828089536  0.3828089536  0.3828089536  0.3828089536
#>  [566]  0.3828089536  0.7943123076  0.7943123076  0.7943123076  0.7943123076
#>  [571]  0.7943123076  0.1127263159 -0.6945251710 -0.6945251710 -0.6945251710
#>  [576] -0.6945251710 -0.5545180853 -0.5545180853 -0.5545180853 -0.5545180853
#>  [581] -0.5545180853 -0.5545180853  0.2822187753  0.2822187753  0.2822187753
#>  [586]  0.2822187753 -0.3379116858 -0.3379116858  1.5043059522  1.5043059522
#>  [591]  1.2493824056  0.6589079680  0.6589079680  0.0180035935  0.0180035935
#>  [596]  0.0180035935  0.0180035935 -0.3632267526 -0.3466565074 -0.3466565074
#>  [601] -0.3466565074 -0.3466565074  0.1568233138  0.1568233138 -0.4120216835
#>  [606] -0.4120216835 -0.4120216835  0.1372658141  0.0337574203  0.0337574203
#>  [611] -0.3592496159  0.3122892084  0.3122892084  0.3122892084 -0.5446219512
#>  [616] -0.5446219512 -0.5446219512 -0.5446219512 -0.5446219512 -0.2632503045
#>  [621] -0.7983745643 -0.2407173711  0.2377776162  0.2377776162  0.8233966074
#>  [626]  0.9262923666  0.9262923666  0.9262923666  0.9262923666  0.0129044168
#>  [631]  0.0129044168  0.0129044168  0.0129044168  0.1487612214 -0.6797733229
#>  [636]  0.3689092125  0.3689092125  0.8345364228 -0.6149742455 -0.6149742455
#>  [641]  0.3032068260  0.4375163218  0.4375163218  0.4375163218  0.5975071312
#>  [646] -1.6087971285 -0.4762383602 -0.4762383602 -0.4762383602 -0.4762383602
#>  [651] -0.4762383602 -0.1514381426 -0.4268114527 -0.4268114527 -0.4268114527
#>  [656] -0.1194439672 -0.1194439672 -0.7138401519 -0.8890155812 -0.8890155812
#>  [661] -0.1815822631 -0.1815822631 -0.1815822631 -0.1815822631  0.3905202138
#>  [666]  0.3905202138 -0.1916499896 -0.0381634662  1.1263061140  1.1263061140
#>  [671]  1.1263061140  1.1263061140  1.1263061140  1.5031703811  1.7944195642
#>  [676]  1.7475095916  1.4618547006  1.4618547006  1.4618547006  1.0574581249
#>  [681]  1.0574581249 -1.0455509395 -1.0455509395  0.0907801924  0.0907801924
#>  [686]  0.0907801924 -0.7371732541 -0.5527841018 -0.5527841018 -0.4430656905
#>  [691] -0.4430656905 -0.4430656905 -0.8333424883 -0.8564954598  1.6285871098
#>  [696]  1.3010236450  1.3010236450 -0.4871437056  0.5555472902  0.5555472902
#>  [701]  0.5555472902  0.0062750218  0.0062750218 -0.2386456770 -0.5513597290
#>  [706] -0.5513597290 -0.5513597290 -2.0527499188 -1.7516653480 -0.9393241551
#>  [711] -0.8100739535 -0.7509351647 -0.7509351647 -0.7509351647 -0.5114787820
#>  [716] -0.5114787820  0.5894986845  0.5894986845  0.5894986845 -0.5303950263
#>  [721] -0.5303950263 -0.5303950263 -0.5303950263  0.1868339225 -0.1194657861
#>  [726] -0.0773344941 -0.2605097910 -0.3333942849 -0.3333942849 -0.5902857266
#>  [731] -1.0957609062 -1.0957609062 -1.0957609062  0.3893771564  0.1921745016
#>  [736]  0.1921745016  0.3785217822  0.3785217822 -0.3588865531 -0.3588865531
#>  [741]  0.0954158425  0.0954158425 -0.9373674278 -1.5280240420 -1.5280240420
#>  [746] -1.5280240420 -1.6703294908 -1.6703294908 -1.5314532682 -1.5725071381
#>  [751] -1.3815809943 -1.3815809943 -1.3815809943 -1.3815809943 -1.3815809943
#>  [756] -1.1617663883 -1.1617663883 -1.1617663883 -1.4150175758 -0.1441877715
#>  [761] -0.1441877715 -0.1441877715 -0.1441877715 -0.5303392827 -0.6637586172
#>  [766] -0.6637586172 -0.5180317038 -0.5180317038 -0.5180317038 -0.4980893721
#>  [771] -0.4980893721 -0.4980893721 -0.4980893721 -0.2312632165 -0.2312632165
#>  [776] -0.2312632165 -0.2312632165 -0.2312632165 -0.9114679998 -0.9114679998
#>  [781] -0.9114679998 -0.8349818333  0.0220866393  0.0220866393  0.2043460618
#>  [786]  0.2043460618  0.2043460618 -0.3892897369  0.7529405974 -1.1990232048
#>  [791] -1.1990232048 -1.1990232048 -1.1990232048  0.1936002270  0.1936002270
#>  [796] -0.2440774868 -0.2784762907  0.6235393330  0.3941211687  0.7854066501
#>  [801]  1.0409126400  0.1033938963 -0.7435178190 -0.7435178190 -0.7435178190
#>  [806] -1.5089886072 -0.9284297246 -0.1634491941  0.8117635735  0.8117635735
#>  [811]  0.8117635735  0.8117635735  1.7578046061  2.0842714108  2.0842714108
#>  [816]  0.5336178293  0.5336178293 -0.1243271092  0.4126192295  0.4126192295
#>  [821]  0.1695482278 -0.6459147159 -0.7648650644  1.2485091817  1.2485091817
#>  [826]  1.2729659489  1.2729659489  1.6081766155  1.6081766155  1.1485087221
#>  [831]  1.1485087221 -1.5653731428 -1.5653731428  0.5277073965 -0.2446311441
#>  [836] -0.2446311441 -0.2446311441 -0.2446311441 -0.2446311441 -0.2446311441
#>  [841] -0.2446311441  0.3281847649  0.5221837383  2.3715411941  2.1731842247
#>  [846]  1.2299102781  1.2299102781  1.2299102781  1.0827606908  1.0827606908
#>  [851]  1.0827606908  1.0165119100  1.0165119100  1.0165119100  1.0165119100
#>  [856]  1.0165119100  1.4403957561  1.4403957561 -1.0291968365  0.1496760904
#>  [861]  0.1496760904  0.1496760904 -0.6949904728  0.5592894855 -0.3554783102
#>  [866] -0.3554783102 -0.3554783102 -0.8237682619  0.3273188979  0.2861226478
#>  [871]  0.2861226478 -0.0165122888  0.8008935579  0.8008935579 -0.7466257728
#>  [876] -0.7466257728  0.3299367253  0.3299367253  0.0061682499  0.0061682499
#>  [881]  0.5374424932  0.5374424932  0.5374424932  0.7054292419 -0.2739288009
#>  [886] -0.2739288009 -0.2739288009 -0.2739288009 -1.1540707261 -1.1540707261
#>  [891] -1.3612295252 -0.1224341342 -1.0143593577 -2.2121646945 -2.0822317131
#>  [896] -0.8470591157 -0.8470591157 -0.8470591157 -0.8470591157 -0.8470591157
#>  [901] -0.6807440320 -0.6807440320 -0.6807440320  0.7301731488  0.7301731488
#>  [906]  0.7301731488  0.6323754846  0.6323754846  0.6323754846  0.6323754846
#>  [911]  0.6323754846  0.4853545443  0.7003685151 -0.3032872825 -0.3032872825
#>  [916] -0.3032872825 -0.3612461696 -0.3612461696 -0.1539046109 -0.1539046109
#>  [921]  0.2614166534  0.2614166534  0.2614166534  0.4481137079  0.4481137079
#>  [926]  0.4481137079 -0.3700908609 -0.4198935494  0.8865876684 -0.2930938541
#>  [931]  0.0476389024  0.6590348686  0.6590348686  1.5603037544 -0.6502139279
#>  [936]  0.6465411924  0.6465411924 -0.0935447601  0.1074629315  0.1074629315
#>  [941] -0.7010566039 -0.5449725189 -1.2619617134 -1.2619617134 -1.2619617134
#>  [946] -1.2619617134 -0.6751838206 -0.6751838206  0.1027780506 -1.2964425021
#>  [951] -1.2964425021  0.2542383970 -0.5319026313 -0.5319026313 -0.5319026313
#>  [956] -0.5319026313 -0.5319026313 -0.5319026313 -1.0760457861  0.3045283135
#>  [961]  0.3045283135  0.3045283135 -1.4145718413  0.5135399143  0.3219559261
#>  [966]  0.3219559261  0.3219559261  0.3219559261  0.3219559261  0.3219559261
#>  [971] -0.1922273049 -0.1261020448 -0.9779267687 -0.1427894108 -0.1427894108
#>  [976]  0.2071705716  0.2071705716  0.2071705716 -0.2778221136 -0.2778221136
#>  [981] -0.0150451293 -0.0150451293 -0.0150451293 -0.0150451293 -0.4226608882
#>  [986] -0.4226608882 -0.4226608882 -0.4226608882 -0.4226608882  0.0263003992
#>  [991]  0.0263003992 -1.1715293918 -1.1715293918  0.1104875316  0.2250021115
#>  [996]  0.2250021115 -0.5279062990  0.1041357947 -0.0055193902 -0.0055193902
#> 
#> $alpha1
#>    [1] 1.2089137 1.2089137 1.2089137 1.2089137 1.2089137 1.2089137 1.2089137
#>    [8] 1.2089137 1.8824384 1.8824384 1.8824384 0.7463026 0.5658473 0.6381881
#>   [15] 1.1372013 1.1372013 1.1372013 1.1372013 1.1372013 1.2033941 1.2033941
#>   [22] 1.0537195 0.6784528 0.6784528 0.8283425 0.6392716 1.1180366 1.1180366
#>   [29] 0.6671563 0.6671563 0.6671563 0.9322451 0.9322451 0.9322451 0.9322451
#>   [36] 0.9322451 0.6023849 0.6023849 0.6787643 0.9152600 2.1497531 1.2722603
#>   [43] 1.4946037 1.7155208 1.2758237 0.8887918 0.6329530 0.4812856 0.8572247
#>   [50] 0.8572247 0.9498173 1.2381931 0.6841732 1.4166225 1.4166225 1.4166225
#>   [57] 1.4166225 1.2286228 1.2140011 0.6939716 0.6939716 0.6939716 1.4211068
#>   [64] 1.4211068 1.4211068 2.1251531 0.9678577 1.6670842 1.6670842 1.6670842
#>   [71] 1.6670842 1.6670842 1.5002289 1.5002289 0.7142854 0.7142854 0.7142854
#>   [78] 0.7142854 0.7142854 0.7142854 0.7142854 0.7142854 0.6222271 0.7948906
#>   [85] 0.7948906 0.7948906 2.5983616 0.6309488 0.6309488 0.3850815 0.3850815
#>   [92] 0.3850815 0.6115325 2.1832622 1.4943869 1.2063014 1.2063014 0.5844285
#>   [99] 0.5844285 0.5844285 0.5844285 0.5844285 1.1243024 1.1243024 1.1243024
#>  [106] 1.1243024 1.1243024 1.1243024 1.1243024 1.4276351 0.6910855 0.1848005
#>  [113] 0.6764735 0.6764735 1.3638313 1.3851643 0.4217592 0.4217592 0.4217592
#>  [120] 0.4217592 0.4217592 0.6228812 0.6228812 0.5650081 1.7450572 1.2499645
#>  [127] 1.2499645 0.6236327 2.7091476 2.2553528 2.1169484 1.4429253 1.4429253
#>  [134] 1.2353968 0.6639894 0.6639894 1.1486842 0.6664480 1.3756675 1.3756675
#>  [141] 1.3756675 0.6406530 0.8717676 1.3900628 1.3900628 1.3900628 1.8487848
#>  [148] 1.8487848 1.5622379 1.4295724 0.8158666 1.1255582 1.1255582 1.9270254
#>  [155] 1.9270254 1.9270254 1.9270254 1.9270254 0.9578185 1.6595151 1.6595151
#>  [162] 1.6595151 1.6595151 1.6595151 1.6404904 1.5008948 1.5008948 0.6208189
#>  [169] 0.6208189 0.6208189 0.6208189 0.6208189 0.3492695 0.5028069 0.5028069
#>  [176] 0.5306222 0.5306222 1.2204003 0.9863731 2.1232427 0.8313744 0.8313744
#>  [183] 0.8313744 0.8313744 1.4021258 0.9267488 1.0263397 1.0263397 0.8539199
#>  [190] 1.1359173 1.8195439 1.3329532 2.7439739 1.1513461 0.4614458 0.4614458
#>  [197] 0.2953245 0.2953245 0.2953245 2.1365922 1.8762953 1.8762953 0.8620486
#>  [204] 0.8620486 0.8620486 0.8620486 0.8620486 2.0351693 1.0335309 1.0335309
#>  [211] 1.0335309 1.0335309 0.6970303 2.1217454 1.3100601 1.3100601 1.4814890
#>  [218] 1.4814890 1.4814890 1.4814890 1.4814890 1.4814890 0.6769258 0.6111195
#>  [225] 0.6111195 1.0765956 0.4402161 0.4402161 0.6111480 0.6111480 0.6111480
#>  [232] 0.3936678 0.5545355 1.1440368 1.1440368 0.6180231 0.6395436 0.4056017
#>  [239] 0.4056017 0.4056017 0.8042957 0.3889822 0.6459154 0.7144802 0.7144802
#>  [246] 0.7144802 0.7144802 0.7144802 0.7144802 0.7144802 1.6084192 1.4507408
#>  [253] 1.4507408 1.4507408 1.4507408 0.6895711 0.6895711 0.6895711 1.3218526
#>  [260] 0.5060769 1.0795543 0.4711090 0.4304969 1.0462346 1.0462346 1.0462346
#>  [267] 1.0462346 2.5206288 0.4770007 0.8018907 1.4568728 1.1247803 0.7586127
#>  [274] 0.7586127 1.0843223 1.2068733 0.6480561 0.6480561 1.8795334 1.8795334
#>  [281] 0.2812975 1.4360538 1.4360538 1.4360538 0.5408857 0.5408857 0.5408857
#>  [288] 0.5408857 1.3051825 1.4932312 1.3766381 1.3766381 1.3766381 1.3766381
#>  [295] 1.3766381 1.0494817 1.0494817 1.4541086 1.4541086 1.5655833 1.5655833
#>  [302] 1.5655833 1.5655833 0.9656198 0.9656198 0.9656198 2.6731457 0.5154469
#>  [309] 1.3634406 1.3634406 1.7059015 0.7185869 1.2231999 1.2231999 1.2231999
#>  [316] 1.2231999 1.2231999 1.2231999 1.2231999 1.5398876 1.5398876 0.6831210
#>  [323] 0.6831210 0.2822372 1.7881934 1.7881934 0.8833825 0.8833825 0.8833825
#>  [330] 0.8388854 0.8388854 0.8388854 0.8388854 0.8388854 1.0992584 3.8093693
#>  [337] 1.2168653 1.2483795 1.2483795 0.5861003 0.5111248 0.7292877 0.9551533
#>  [344] 0.9551533 0.7955537 0.7955537 0.9890860 0.9890860 0.9890860 1.0948032
#>  [351] 1.0948032 1.0948032 1.9261454 1.9261454 0.4859353 0.4859353 0.5051431
#>  [358] 0.5051431 0.9964653 1.3637354 1.4426215 0.3428314 0.5342863 1.5876102
#>  [365] 4.1991103 1.5661869 1.5661869 0.9384308 0.9384308 0.9384308 1.3011606
#>  [372] 1.4817305 1.5318445 1.5318445 0.7923554 0.7923554 0.7923554 0.5520411
#>  [379] 0.5520411 0.5520411 0.5520411 1.1687978 1.1687978 0.3332853 0.3332853
#>  [386] 0.3332853 1.1312913 1.6899252 1.6899252 1.6899252 1.6899252 0.9416556
#>  [393] 0.9416556 0.6235259 0.9017347 0.6917761 0.6917761 1.7005674 1.7005674
#>  [400] 1.7005674 1.7005674 1.7005674 1.3665652 0.5023424 1.5226439 1.9492199
#>  [407] 1.9492199 2.0530457 0.4259679 0.3817746 0.3817746 0.3765569 0.4357431
#>  [414] 1.4187857 1.4187857 1.6137519 1.0359709 1.0359709 1.0359709 1.0359709
#>  [421] 1.0359709 1.0359709 1.0359709 1.7310457 1.5692925 1.5692925 1.5692925
#>  [428] 1.5692925 1.6645552 1.1440479 1.1440479 1.1440479 1.1440479 1.1440479
#>  [435] 1.1440479 1.1440479 0.5416401 0.5416401 0.5653019 0.9342734 0.9342734
#>  [442] 0.9342734 0.9342734 0.9342734 0.9342734 1.1830926 1.4512188 1.4512188
#>  [449] 0.6053823 1.1707746 1.1707746 0.9951202 0.9951202 0.9951202 1.3436556
#>  [456] 1.2926637 1.2926637 1.2926637 1.5456704 1.5456704 0.9985213 0.9985213
#>  [463] 0.9985213 0.9985213 1.1313783 1.1313783 1.1313783 1.1313783 1.1313783
#>  [470] 1.1313783 1.1313783 1.1313783 1.1313783 2.2536546 1.2562732 1.2562732
#>  [477] 0.9322922 0.9322922 0.9322922 0.3520363 0.3520363 0.6094490 0.8918828
#>  [484] 0.8918828 0.8918828 0.8918828 0.8918828 1.5957995 0.8785979 0.8785979
#>  [491] 0.8785979 0.8785979 0.8785979 0.8785979 0.8785979 0.8378016 1.0981205
#>  [498] 1.0981205 1.6684168 1.6684168 1.3486518 1.3486518 1.3486518 1.5204187
#>  [505] 1.2267738 1.2267738 1.2267738 0.8432977 0.8432977 1.4563428 1.4563428
#>  [512] 1.4563428 1.4563428 1.4563428 1.4563428 1.4563428 1.4378605 1.4378605
#>  [519] 1.4378605 1.4378605 1.7819221 2.2227804 2.2227804 0.3589096 0.3862485
#>  [526] 0.3862485 0.6474669 0.3872050 2.0538496 2.0538496 2.1379549 2.1379549
#>  [533] 2.1379549 2.7574168 2.3132947 0.8483300 1.7766710 1.7766710 1.7766710
#>  [540] 1.9154049 1.9154049 1.3770541 1.3770541 1.3770541 1.3770541 1.1323530
#>  [547] 1.1323530 1.1323530 0.8566952 0.5444176 0.5444176 1.1422452 1.0402388
#>  [554] 0.8502269 1.4228740 0.9908219 0.9908219 1.3118540 1.3118540 1.3118540
#>  [561] 0.4784579 0.5962388 0.5962388 0.5962388 0.5962388 0.5962388 1.6885419
#>  [568] 1.6885419 1.6885419 1.6885419 1.6885419 2.5850129 2.0089702 2.0089702
#>  [575] 2.0089702 2.0089702 1.3031367 1.3031367 1.3031367 1.3031367 1.3031367
#>  [582] 1.3031367 1.6638430 1.6638430 1.6638430 1.6638430 1.0216874 1.0216874
#>  [589] 0.9936924 0.9936924 1.8257345 0.3035869 0.3035869 1.0895348 1.0895348
#>  [596] 1.0895348 1.0895348 0.8273533 1.0601955 1.0601955 1.0601955 1.0601955
#>  [603] 1.3733117 1.3733117 0.8164871 0.8164871 0.8164871 1.4939522 0.8400250
#>  [610] 0.8400250 1.0930623 1.2043333 1.2043333 1.2043333 0.9230198 0.9230198
#>  [617] 0.9230198 0.9230198 0.9230198 1.4065543 0.9853835 0.6302322 0.5987759
#>  [624] 0.5987759 0.8910584 1.1638327 1.1638327 1.1638327 1.1638327 0.6691257
#>  [631] 0.6691257 0.6691257 0.6691257 0.8787402 0.8161238 2.0079713 2.0079713
#>  [638] 1.0822411 1.6534441 1.6534441 1.7081845 1.5102532 1.5102532 1.5102532
#>  [645] 3.8024704 0.6890422 1.5886094 1.5886094 1.5886094 1.5886094 1.5886094
#>  [652] 1.2826750 1.8456144 1.8456144 1.8456144 0.4379241 0.4379241 0.3561658
#>  [659] 0.4713117 0.4713117 2.1985416 2.1985416 2.1985416 2.1985416 2.1658266
#>  [666] 2.1658266 1.1561250 1.9355448 1.0475676 1.0475676 1.0475676 1.0475676
#>  [673] 1.0475676 2.3749965 1.7748017 1.9571396 3.7002653 3.7002653 3.7002653
#>  [680] 2.8152484 2.8152484 0.9613406 0.9613406 0.7173386 0.7173386 0.7173386
#>  [687] 1.8602876 1.2353508 1.2353508 0.9792487 0.9792487 0.9792487 0.5349266
#>  [694] 0.7690249 1.6473221 1.4969765 1.4969765 0.5996087 1.3822416 1.3822416
#>  [701] 1.3822416 1.7561915 1.7561915 0.6929342 0.7735668 0.7735668 0.7735668
#>  [708] 1.2105030 1.6612349 2.5886409 0.7381335 0.2165318 0.2165318 0.2165318
#>  [715] 1.2453661 1.2453661 1.0310185 1.0310185 1.0310185 1.2039822 1.2039822
#>  [722] 1.2039822 1.2039822 0.7734175 1.3906471 1.6479446 0.5842495 1.2236125
#>  [729] 1.2236125 0.5296464 0.3435013 0.3435013 0.3435013 0.6809678 0.6213867
#>  [736] 0.6213867 0.7263750 0.7263750 1.2169877 1.2169877 0.4498499 0.4498499
#>  [743] 0.4366460 1.3511378 1.3511378 1.3511378 2.0637655 2.0637655 1.3190990
#>  [750] 1.4564374 0.6269331 0.6269331 0.6269331 0.6269331 0.6269331 0.9017337
#>  [757] 0.9017337 0.9017337 1.4182246 0.5578659 0.5578659 0.5578659 0.5578659
#>  [764] 1.4117606 0.5125388 0.5125388 1.3465675 1.3465675 1.3465675 1.2951806
#>  [771] 1.2951806 1.2951806 1.2951806 0.5663873 0.5663873 0.5663873 0.5663873
#>  [778] 0.5663873 1.4566425 1.4566425 1.4566425 0.7096359 1.3839598 1.3839598
#>  [785] 0.8279775 0.8279775 0.8279775 0.6003131 2.2926039 1.1913698 1.1913698
#>  [792] 1.1913698 1.1913698 2.7278112 2.7278112 0.3187252 0.5946397 1.2064998
#>  [799] 0.4772374 1.9315913 2.2000578 1.1431045 0.7641635 0.7641635 0.7641635
#>  [806] 1.9787460 0.3124922 3.6793231 0.3960230 0.3960230 0.3960230 0.3960230
#>  [813] 1.2431982 1.3019412 1.3019412 1.0216916 1.0216916 0.8765418 0.8706930
#>  [820] 0.8706930 0.4150587 1.0421800 2.1402416 2.0434845 2.0434845 0.6409899
#>  [827] 0.6409899 1.3494887 1.3494887 1.9991516 1.9991516 1.2481441 1.2481441
#>  [834] 2.4667324 1.1723214 1.1723214 1.1723214 1.1723214 1.1723214 1.1723214
#>  [841] 1.1723214 0.6596773 0.8298693 1.6226952 1.4907025 0.7988459 0.7988459
#>  [848] 0.7988459 2.4352534 2.4352534 2.4352534 0.9568286 0.9568286 0.9568286
#>  [855] 0.9568286 0.9568286 1.5360965 1.5360965 3.4414197 2.1462707 2.1462707
#>  [862] 2.1462707 0.6094154 1.2694514 1.6875076 1.6875076 1.6875076 1.4046284
#>  [869] 0.9977027 1.6384479 1.6384479 1.2201799 1.1948906 1.1948906 0.4462519
#>  [876] 0.4462519 0.7544616 0.7544616 3.5031926 3.5031926 1.2932359 1.2932359
#>  [883] 1.2932359 1.2379317 0.8626470 0.8626470 0.8626470 0.8626470 0.9229281
#>  [890] 0.9229281 1.9499128 1.2141459 0.5177483 0.7773821 0.7865079 0.9553714
#>  [897] 0.9553714 0.9553714 0.9553714 0.9553714 0.3952511 0.3952511 0.3952511
#>  [904] 1.8325292 1.8325292 1.8325292 0.7668785 0.7668785 0.7668785 0.7668785
#>  [911] 0.7668785 0.5766569 1.9495750 1.4378960 1.4378960 1.4378960 1.1675151
#>  [918] 1.1675151 1.3605027 1.3605027 1.6870023 1.6870023 1.6870023 0.8818434
#>  [925] 0.8818434 0.8818434 0.6457964 0.7242059 0.8230868 0.4735861 0.6556620
#>  [932] 0.7138074 0.7138074 1.7160957 1.5662832 1.8260619 1.8260619 1.1582064
#>  [939] 0.9109647 0.9109647 1.5773855 2.2004175 1.0157005 1.0157005 1.0157005
#>  [946] 1.0157005 1.9594225 1.9594225 3.2684683 1.6300203 1.6300203 1.0541703
#>  [953] 1.3297617 1.3297617 1.3297617 1.3297617 1.3297617 1.3297617 1.8755734
#>  [960] 0.9504915 0.9504915 0.9504915 1.7454473 0.6061777 0.6666548 0.6666548
#>  [967] 0.6666548 0.6666548 0.6666548 0.6666548 2.2778732 2.1540402 1.2398180
#>  [974] 0.7188424 0.7188424 1.1526711 1.1526711 1.1526711 0.8570232 0.8570232
#>  [981] 0.7722106 0.7722106 0.7722106 0.7722106 0.9326792 0.9326792 0.9326792
#>  [988] 0.9326792 0.9326792 0.7116436 0.7116436 0.3747297 0.3747297 1.0190634
#>  [995] 1.0712335 1.0712335 1.8224378 1.5878087 1.0318571 1.0318571
#> 
#> 
#> Slot "options":
#> An object of class "McmcOptions"
#> Slot "iterations":
#> [1] 2100
#> 
#> Slot "burnin":
#> [1] 100
#> 
#> Slot "step":
#> [1] 2
#> 
#> Slot "rng_kind":
#> [1] NA
#> 
#> Slot "rng_seed":
#> [1] NA
#> 
#> 
# Create some data from the class `DataDual`.
plcb <- 0.001
my_data <- DataDual(
  w = c(13, 77, 86, 26, 27, 36, 37, 97, 21, 49, 87, 48),
  x = c(plcb, 25, 25, 25, plcb, 50, 50, 50, plcb, 100, 100, 100),
  y = c(0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 1L, 0L),
  doseGrid = c(plcb, seq(25, 300, 25)),
  placebo = TRUE,
  ID = 1:12,
  cohort = c(1L, 1L, 1L, 1L, 2L, 2L, 2L, 2L, 3L, 3L, 3L, 3L)
)

# Initialize the CRM model.
my_model <- DualEndpointRW(
  mean = c(0, 1),
  cov = matrix(c(1, 0, 0, 1), nrow = 2),
  sigma2W = c(a = 0.1, b = 0.1),
  rho = c(a = 1, b = 1),
  sigma2betaW = 0.01,
  rw1 = TRUE
)

# Sample from the posterior distribution.
my_options <- McmcOptions(
  burnin = 50,
  step = 2,
  samples = 4,
  rng_kind = "Mersenne-Twister",
  rng_seed = 1
)

samples <- mcmc(data = my_data, model = my_model, options = my_options)
samples
#> An object of class "Samples"
#> Slot "data":
#> $betaW
#>          [,1]     [,2]     [,3]     [,4]     [,5]     [,6]     [,7]     [,8]
#> [1,] 43.97979 44.41466 44.43972 44.11392 44.62213 45.16043 45.16812 45.21349
#> [2,] 43.15657 42.91989 43.51310 44.68803 44.56862 44.87953 44.94821 45.51928
#> [3,] 63.68104 63.29789 63.85898 64.05148 63.52357 64.10696 64.75609 65.32082
#> [4,] 50.45590 49.98192 49.94248 50.23495 50.54648 50.68016 51.02047 50.21193
#>          [,9]    [,10]    [,11]    [,12]    [,13]
#> [1,] 45.17819 44.50411 44.97736 44.98087 45.22721
#> [2,] 45.87216 45.26223 45.42696 45.75288 45.95267
#> [3,] 65.62907 65.52253 66.59065 66.42558 66.77227
#> [4,] 50.02701 49.17010 49.01135 49.45278 49.73688
#> 
#> $betaZ
#>           [,1]       [,2]
#> [1,] -2.507907 0.03496807
#> [2,] -2.507907 0.03496807
#> [3,] -2.507907 0.03496807
#> [4,] -2.507907 0.03496807
#> 
#> $delta
#>            [,1]        [,2]       [,3]       [,4]      [,5]        [,6]
#> [1,]  0.4348687  0.02505645 -0.3258029  0.5082169 0.5382963 0.007687938
#> [2,] -0.2366798  0.59321185  1.1749236 -0.1194105 0.3109172 0.068670722
#> [3,] -0.3831418  0.56109098  0.1924961 -0.5279107 0.5833939 0.649129673
#> [4,] -0.4739807 -0.03943816  0.2924624  0.3115307 0.1336790 0.340314130
#>             [,7]        [,8]       [,9]      [,10]        [,11]     [,12]
#> [1,]  0.04537578 -0.03529845 -0.6740836  0.4732525  0.003504127 0.2463430
#> [2,]  0.57107036  0.35288467 -0.6099253  0.1647277  0.325915901 0.1997869
#> [3,]  0.56472919  0.30824406 -0.1065357  1.0681196 -0.165072414 0.3466892
#> [4,] -0.80854374 -0.18491804 -0.8569132 -0.1587477  0.441429357 0.2841035
#> 
#> $precW
#> [1] 0.0007380298 0.0009402290 0.0006374998 0.0006963610
#> 
#> $rho
#> [1] 0.1193680 0.1129187 0.2440825 0.1499421
#> 
#> 
#> Slot "options":
#> An object of class "McmcOptions"
#> Slot "iterations":
#> [1] 58
#> 
#> Slot "burnin":
#> [1] 50
#> 
#> Slot "step":
#> [1] 2
#> 
#> Slot "rng_kind":
#> [1] "base::Mersenne-Twister"
#> 
#> Slot "rng_seed":
#> [1] 1
#> 
#> 
# Create some data from the class `DataDual`.
plcb <- 0.001
my_data <- DataDual(
  w = c(13, 77, 86, 26, 27, 36, 37, 97, 21, 49, 87, 48),
  x = c(plcb, 25, 25, 25, plcb, 50, 50, 50, plcb, 100, 100, 100),
  y = c(0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 0L, 1L, 0L),
  doseGrid = c(plcb, seq(25, 300, 25)),
  placebo = TRUE,
  ID = 1:12,
  cohort = c(1L, 1L, 1L, 1L, 2L, 2L, 2L, 2L, 3L, 3L, 3L, 3L)
)

# Initialize the CRM model.
my_model <- DualEndpointBeta(
  mean = c(0, 1),
  cov = diag(2),
  ref_dose = 2,
  use_log_dose = FALSE,
  sigma2W = c(a = 1, b = 2),
  rho = c(a = 1.5, b = 2.5),
  E0 = 2,
  Emax = 50,
  delta1 = 6,
  mode = 9,
  ref_dose_beta = my_data@doseGrid[my_data@nGrid] + 10
)

# Sample from the posterior distribution.
my_options <- McmcOptions(
  burnin = 50,
  step = 2,
  samples = 4,
  rng_kind = "Mersenne-Twister",
  rng_seed = 1
)

samples <- mcmc(data = my_data, model = my_model, options = my_options)
samples
#> An object of class "Samples"
#> Slot "data":
#> $betaW
#>      [,1]     [,2] [,3] [,4] [,5] [,6] [,7] [,8] [,9] [,10] [,11] [,12] [,13]
#> [1,]    2 2.383076    2    2    2    2    2    2    2     2     2     2     2
#> [2,]    2 2.383076    2    2    2    2    2    2    2     2     2     2     2
#> [3,]    2 2.383076    2    2    2    2    2    2    2     2     2     2     2
#> [4,]    2 2.383076    2    2    2    2    2    2    2     2     2     2     2
#> 
#> $betaZ
#>           [,1]       [,2]
#> [1,] -4.354759 0.09035452
#> [2,] -4.354759 0.09035452
#> [3,] -4.354759 0.09035452
#> [4,] -3.273111 0.08172139
#> 
#> $precW
#> [1] 0.0004229406 0.0004149886 0.0004264222 0.0003413195
#> 
#> $rho
#> [1] -0.5116824 -0.5902350 -0.5709147 -0.5230612
#> 
#> 
#> Slot "options":
#> An object of class "McmcOptions"
#> Slot "iterations":
#> [1] 58
#> 
#> Slot "burnin":
#> [1] 50
#> 
#> Slot "step":
#> [1] 2
#> 
#> Slot "rng_kind":
#> [1] "base::Mersenne-Twister"
#> 
#> Slot "rng_seed":
#> [1] 1
#> 
#> 
##obtain mcmc DLE samples given the data, LogisticIndepBeta (DLE model) and mcmc simulations options
## data must be of 'Data' class
data <- Data(
  x = c(25, 50, 50, 75, 100, 100, 225, 300),
  y = c(0, 0, 0, 0, 1, 1, 1, 1),
  doseGrid = seq(25, 300, 25)
)
#> Used default patient IDs!
#> Used best guess cohort indices!
## model must be of 'LogisticIndepBeta' class
model <- LogisticIndepBeta(
  binDLE = c(1.05, 1.8),
  DLEweights = c(3, 3),
  DLEdose = c(25, 300),
  data = data
)
## options must be ''McmcOptions' class
options <- McmcOptions(burnin = 100, step = 2, samples = 200)
set.seed(94)
samples <- mcmc(data = data, model = model, options = options)
# nolint start
##obtain mcmc efficacy samples given the data, 'Effloglog' model (efficacy model) and
## mcmc simulations options data must be of 'DataDual' class
data <- DataDual(
  x = c(25, 50, 25, 50, 75, 300, 250, 150),
  y = c(0, 0, 0, 0, 0, 1, 1, 0),
  w = c(0.31, 0.42, 0.59, 0.45, 0.6, 0.7, 0.6, 0.52),
  doseGrid = seq(25, 300, 25),
  placebo = FALSE
)
#> Used default patient IDs!
#> Used best guess cohort indices!
## model must be of 'Effloglog' class
Effmodel <- Effloglog(
  eff = c(1.223, 2.513),
  eff_dose = c(25, 300),
  nu = c(a = 1, b = 0.025),
  data = data
)

## options must be ''McmcOptions' class
options <- McmcOptions(burnin = 100, step = 2, samples = 200)
set.seed(94)
samples <- mcmc(data = data, model = Effmodel, options = options)
# nolint end
## obtain mcmc efficacy samples given the data, 'EffFlexi' model (efficacy model) and
## mcmc simulations options
## data must be of 'DataDual' class
data <- DataDual(
  x = c(25, 50, 25, 50, 75, 300, 250, 150),
  y = c(0, 0, 0, 0, 0, 1, 1, 0),
  w = c(0.31, 0.42, 0.59, 0.45, 0.6, 0.7, 0.6, 0.52),
  doseGrid = seq(25, 300, 25)
)
#> Used default patient IDs!
#> Used best guess cohort indices!
## model must be of 'EffFlexi' class

effmodel <- EffFlexi(
  eff = c(1.223, 2.513),
  eff_dose = c(25, 300),
  sigma2W = c(a = 0.1, b = 0.1),
  sigma2betaW = c(a = 20, b = 50),
  rw1 = FALSE,
  data = data
)

## options must be ''McmcOptions' class
options <- McmcOptions(burnin = 100, step = 2, samples = 200)
set.seed(94)
samples <- mcmc(data = data, model = effmodel, options = options)
ordinal_data <- .DefaultDataOrdinal()
ordinal_model <- .DefaultLogisticLogNormalOrdinal()
mcmc_options <- .DefaultMcmcOptions()

samples <- mcmc(ordinal_data, ordinal_model, mcmc_options)
```
